Re-import localizations

--- a/Vienna/Interfaces/pt-BR.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/pt-BR.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "A cada 15 minutos";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Após o comando "Próxima não lida"";
+"2oy-1i-QQP.title" = "Após o comando \"Próxima não lida\"";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "A cada 30 minutos";
