--- a/Vienna/Resources/ja.lproj/Localizable.strings
+++ b/Vienna/Resources/ja.lproj/Localizable.strings
@@ -10,6 +10,9 @@
 /* No comment provided by engineer. */
 "%d new articles retrieved" = "%d の新着記事があります";
 
+/* Notification body */
+"%d new unread articles retrieved" = "%d の未読記事があります。";
+
 /* No comment provided by engineer. */
 "%d subscriptions successfully exported" = "%d の購読の書き出しに成功しました。";
 
@@ -28,20 +31,35 @@
 /* No comment provided by engineer. */
 "A folder with that name already exists" = "この名前のフォルダがすでに存在します。";
 
+/* No comment provided by engineer. */
+"A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "フォルダがリモートネットワーク上にあるようなので、新規データベースを \"%@\" に作成できません。このバージョンの Vienna はリモートデータベースに対応していません。ローカルディスク上の他のフォルダを選択してください。";
+
 /* Toolbar item name for the Advanced preference pane */
 "Advanced" = "詳細";
-
-/* Already subscribed body */
-"Already subscribed body" = "このフィードはすでに購読中です。";
-
-/* Already subscribed title */
-"Already subscribed title" = "エラー";
 
 /* No comment provided by engineer. */
 "An error occurred when this feed was last refreshed" = "このフィードの前回更新時エラーが起こりました。";
 
 /* Toolbar item name for the Appearance preference pane */
 "Appearance" = "表示";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete all %d selected folders? This operation cannot be undone." = "選択されている %d のフォルダをすべて削除してもよろしいですか？この操作を元に戻すことはできません。";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete group folder \"%@\" and all sub folders? This operation cannot be undone." = "グループフォルダ \"%@\" と下位のフォルダを削除してもよろしいですか？この操作を元に戻すことはできません。";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete smart folder \"%@\"? This will not delete the actual articles matched by the search." = "スマートフォルダ \"%@\" を削除してもよろしいですか？この操作では、検索にされた実際の記事は削除されません。";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete the messages in the Trash folder permanently?" = "ゴミ箱にある項目を完全に取り除いてもよろしいですか？";
+
+/* No comment provided by engineer. */
+"Are you sure you want to permanently delete the selected articles?" = "選択された記事を完全に消去してもよろしいですか？";
+
+/* No comment provided by engineer. */
+"Are you sure you want to unsubscribe from \"%@\"? This operation will delete all cached articles." = "購読中の \"%@\" を削除してもよろしいですか？この操作は伽周されているすべての記事を削除します。";
 
 /* No comment provided by engineer. */
 "Articles" = "記事";
@@ -54,28 +72,19 @@
 "Cancel" = "キャンセル";
 
 /* No comment provided by engineer. */
-"Cannot create database folder text" = "Vienna は \"%@\" と言うフォルダを作成しようとしましたが、エラーが発生しました。フォルダのパーミッションを確認してください。";
+"Cannot create export output file" = "書き出し用アウトプットファイルを作成することができません";
 
 /* No comment provided by engineer. */
-"Cannot create database folder title" = "Vienna はデータベースフォルダを作成することができません。";
+"Cannot create the Vienna database" = "Vienna データベースを作成できません。";
 
 /* No comment provided by engineer. */
-"Cannot open database text" = "データベースファイル (%@) を開くことができません。データベースファイルを削除または名称を変更して Vienna を再起動してください。";
-
-/* No comment provided by engineer. */
-"Cannot open database title" = "Vienna はデータベースを開くことができません。";
-
-/* No comment provided by engineer. */
-"Cannot open export file message" = "書き出し用アウトプットファイルを作成することができません";
-
-/* No comment provided by engineer. */
-"Cannot open export file message text" = "書き出し用アウトプットファイルを作成することができません。他のアプリケーションで使用されているまたはロックされていないか確認してください。";
+"Cannot import the specified file. The file contents are not valid OPML XML format." = "指定されたファイルを読み込むことができません。ファイルの内容が、正しい OPML XML 形式ではありません。";
 
 /* No comment provided by engineer. */
 "Cannot rename folder" = "フォルダの名称変更ができません";
 
 /* No comment provided by engineer. */
-"Clear" = "最近の検索を消去";
+"Clear Recent Searches" = "最近の検索を消去";
 
 /* No comment provided by engineer. */
 "Connecting to %@" = "%@ に接続中";
@@ -88,9 +97,6 @@
 
 /* No comment provided by engineer. */
 "Copy Page Link to Clipboard" = "リンクタグをコピー";
-
-/* No comment provided by engineer. */
-"Credentials Prompt" = "\"%@\" の購読にはユーザ名とパスワードが必要です。";
 
 /* No comment provided by engineer. */
 "Database Upgrade" = "データベースアップグレード";
@@ -106,37 +112,16 @@
 "Delete Article" = "記事を削除";
 
 /* No comment provided by engineer. */
-"Delete folder status" = "フォルダ \"%@\" を削除中…";
-
-/* No comment provided by engineer. */
 "Delete group folder" = "グループフォルダを削除";
-
-/* No comment provided by engineer. */
-"Delete group folder text" = "グループフォルダ \"%@\" と下位のフォルダを削除してもよろしいですか？この操作を元に戻すことはできません。";
 
 /* No comment provided by engineer. */
 "Delete multiple folders" = "複数のフォルダを削除";
 
 /* No comment provided by engineer. */
-"Delete multiple folders text" = "選択されている %d のフォルダをすべて削除してもよろしいですか？この操作を元に戻すことはできません。";
-
-/* No comment provided by engineer. */
-"Delete RSS feed" = "購読を削除";
-
-/* No comment provided by engineer. */
-"Delete RSS feed text" = "購読中の \"%@\" を削除してもよろしいですか？この操作は伽周されているすべての記事を削除します。";
-
-/* No comment provided by engineer. */
-"Delete selected message" = "選択された記事を完全に消去してもよろしいですか？";
-
-/* No comment provided by engineer. */
-"Delete selected message text" = "この操作を元に戻すことはできません。";
-
-/* No comment provided by engineer. */
 "Delete smart folder" = "スマートフォルダを削除";
 
 /* No comment provided by engineer. */
-"Delete smart folder text" = "スマートフォルダ \"%@\" を削除してもよろしいですか？この操作では、検索にされた実際の記事は削除されません。";
+"Delete subscription" = "購読を削除";
 
 /* Title of a menu item */
 "Delete…" = "削除…";
@@ -144,14 +129,11 @@
 /* Data field name visible in smart folder definition */
 "Deleted" = "削除済み";
 
+/* No comment provided by engineer. */
+"Deleting folder \"%@\"…" = "フォルダ \"%@\" を削除中…";
+
 /* test for a string */
 "does not contain" = "が次を含まない：";
-
-/* No comment provided by engineer. */
-"Downloads Running" = "ダウンロード中です";
-
-/* No comment provided by engineer. */
-"Downloads Running text" = "すべてのダウンロードを中止して、Vienna を終了しますか？";
 
 /* Title of a menu item */
 "Edit…" = "編集…";
@@ -160,31 +142,25 @@
 "Empty" = "空にする";
 
 /* No comment provided by engineer. */
-"Empty Trash message" = "ゴミ箱にある項目を完全に取り除いてもよろしいですか？";
-
-/* No comment provided by engineer. */
-"Empty Trash message text" = "この操作は取り消せません。";
-
-/* No comment provided by engineer. */
 "Enter the URL here" = "URL をここに入力";
 
-/* No comment provided by engineer. */
+/* Already subscribed title */
 "Error" = "エラー";
 
 /* No comment provided by engineer. */
-"Error importing subscriptions body" = "指定されたファイルを読み込むことができません。ファイルの内容が、正しい OPML XML 形式ではありません。";
-
-/* No comment provided by engineer. */
-"Error importing subscriptions title" = "読み込みエラー";
-
-/* No comment provided by engineer. */
 "Error parsing XML data in feed" = "フィードの XML データ解析にエラーがあります。";
+
+/* No comment provided by engineer. */
+"Export Completed" = "書き出し終了";
 
 /* No comment provided by engineer. */
 "External Browser" = "他のブラウザ";
 
 /* No comment provided by engineer. */
 "Feed URL updated to %@" = "フィード URL が %@ にアップデートされました";
+
+/* No comment provided by engineer. */
+"Filter in %@" = "%@ の検索";
 
 /* No comment provided by engineer. */
 "Flag" = "フラッグ";
@@ -217,10 +193,13 @@
 "HTTP code %d reported from server" = "HTTP コード %d がサーバから送られました。";
 
 /* No comment provided by engineer. */
-"Invalid style body" = "標準のスタイルを使用します。";
+"If you quit Vienna now, all downloads will stop." = "すべてのダウンロードを中止して、Vienna を終了しますか？";
 
 /* No comment provided by engineer. */
-"Invalid style title" = "%@ というスタイルには問題があるようです。";
+"Import Completed" = "読み込み終了";
+
+/* No comment provided by engineer. */
+"Import error" = "読み込みエラー";
 
 /* test for a value */
 "is" = "が";
@@ -257,12 +236,6 @@
 
 /* Data field name visible in menu/article list */
 "Link" = "リンク";
-
-/* No comment provided by engineer. */
-"Locate Text" = "フォルダがリモートネットワーク上にあるようなので、新規データベースを \"%@\" に作成できません。このバージョンの Vienna はリモートデータベースに対応していません。ローカルディスク上の他のフォルダを選択してください。";
-
-/* No comment provided by engineer. */
-"Locate Title" = "Vienna データベースを作成できません。";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "すべての記事を既読にする";
@@ -301,19 +274,13 @@
 "New articles retrieved" = "新着記事";
 
 /* No comment provided by engineer. */
-"New style body" = "スタイル \"%@\" はスタイルフォルダにインストールされました。スタイルメニューから選択できます。";
-
-/* No comment provided by engineer. */
-"New style title" = "Vienna に新しいスタイルが追加されました";
-
-/* Notification body */
-"New unread articles retrieved" = "%d の未読記事があります。";
-
-/* No comment provided by engineer. */
 "No" = "ない";
 
 /* No comment provided by engineer. */
 "No new articles available" = "新着記事はありません";
+
+/* No comment provided by engineer. */
+"One or more downloads are in progress" = "ダウンロード中です";
 
 /* Title of a popup menu item */
 "Open" = "開く";
@@ -413,15 +380,6 @@
 "Return to the previous page" = "前のページに戻る";
 
 /* No comment provided by engineer. */
-"RSS Subscription Export Title" = "書き出し終了";
-
-/* No comment provided by engineer. */
-"RSS Subscription Import Title" = "読み込み終了";
-
-/* No comment provided by engineer. */
-"Search in %@" = "%@ の検索";
-
-/* No comment provided by engineer. */
 "Select…" = "選択…";
 
 /* No comment provided by engineer. */
@@ -433,6 +391,12 @@
 /* Title of a popup menu item */
 "Show in Finder" = "Finder に表示";
 
+/* No comment provided by engineer. */
+"Sorry but Vienna was unable to open the database" = "Vienna はデータベースを開くことができません。";
+
+/* No comment provided by engineer. */
+"Sorry, but Vienna was unable to create the database folder" = "Vienna はデータベースフォルダを作成することができません。";
+
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "タイトル";
 
@@ -441,6 +405,33 @@
 
 /* Data field name visible in smart folder definition */
 "Text" = "テキスト";
+
+/* No comment provided by engineer. */
+"The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "データベース (%@) のファイルフォーマットはご利用のバージョンの Vienna でサポートされていません。ファイルを削除するか名前を変更した後、Vienna を再起動してください。";
+
+/* No comment provided by engineer. */
+"The database file (%@) could not be opened for some reason. It may be corrupted or inaccessible. Please delete or rename the database file and restart Vienna." = "データベースファイル (%@) を開くことができません。データベースファイルを削除または名称を変更して Vienna を再起動してください。";
+
+/* No comment provided by engineer. */
+"The database file format has changed" = "データベースのファイルフォーマットが変更されました。";
+
+/* No comment provided by engineer. */
+"The Default style will be used instead." = "標準のスタイルを使用します。";
+
+/* No comment provided by engineer. */
+"The specified export output file could not be created. Check that it is not locked and no other application is using it." = "書き出し用アウトプットファイルを作成することができません。他のアプリケーションで使用されているまたはロックされていないか確認してください。";
+
+/* No comment provided by engineer. */
+"The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "スタイル \"%@\" はスタイルフォルダにインストールされました。スタイルメニューから選択できます。";
+
+/* No comment provided by engineer. */
+"The style %@ appears to be missing or corrupted" = "%@ というスタイルには問題があるようです。";
+
+/* No comment provided by engineer. */
+"The subscription for \"%@\" requires a user name and password for access." = "\"%@\" の購読にはユーザ名とパスワードが必要です。";
+
+/* No comment provided by engineer. */
+"This operation cannot be undone." = "この操作を元に戻すことはできません。";
 
 /* No comment provided by engineer. */
 "Today" = "今日";
@@ -458,26 +449,32 @@
 "Unread Articles" = "未読の記事";
 
 /* No comment provided by engineer. */
-"Unrecognised database format text" = "データベース (%@) のファイルフォーマットはご利用のバージョンの Vienna でサポートされていません。ファイルを削除するか名前を変更した後、Vienna を再起動してください。";
+"Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "\"%@\" というファイルは保存場所が移動されているためがを開くことができません。";
 
 /* No comment provided by engineer. */
-"Unrecognised database format title" = "データベースのファイルフォーマットが変更されました。";
+"Vienna cannot open the file." = "Vienna はこのファイルを開くことができません。";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file body" = "\"%@\" というファイルは保存場所が移動されているためがを開くことができません。";
+"Vienna cannot show the file \"%@\" because it moved since you downloaded it." = "\"%@\" というファイルは保存場所が移動されているためがを開くことができません。";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file title" = "Vienna はこのファイルを開くことができません。";
+"Vienna cannot show the file." = "Vienna はファイルを表示することができません。";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file body" = "\"%@\" というファイルは保存場所が移動されているためがを開くことができません。";
+"Vienna has installed a new style" = "Vienna に新しいスタイルが追加されました";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file title" = "Vienna はファイルを表示することができません。";
+"Vienna was trying to create the folder \"%@\" but an error occurred. Check the permissions on the folders on the path specified." = "Vienna は \"%@\" と言うフォルダを作成しようとしましたが、エラーが発生しました。フォルダのパーミッションを確認してください。";
 
 /* No comment provided by engineer. */
 "Yes" = "ある";
 
 /* No comment provided by engineer. */
 "Yesterday" = "昨日";
+
+/* You are already subscribed to that feed */
+"You are already subscribed to that feed" = "このフィードはすでに購読中です。";
+
+/* No comment provided by engineer. */
+"You cannot undo this action" = "この操作は取り消せません。";
 
