--- a/Vienna/Interfaces/da.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/da.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "Hver 15 minutter";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Efter "Næste ulæste" kommando";
+"2oy-1i-QQP.title" = "Efter \"Næste ulæste\" kommando";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "Hver 30 minutter";
