--- a/Vienna/Interfaces/es.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/es.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "Cada 15 minutos";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Después del comando "No leído siguiente"";
+"2oy-1i-QQP.title" = "Después del comando \"No leído siguiente\"";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "Cada 30 minutos";
