--- a/Vienna/Interfaces/eu.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/eu.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "15 minuturo";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = ""Hurrengo Irakurri Gabea" komandoaren ondoren";
+"2oy-1i-QQP.title" = "\"Hurrengo Irakurri Gabea\" komandoaren ondoren";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "30 minuturo";
