--- a/Vienna/Interfaces/fr.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/fr.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "Toutes les 15 minutes";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Après la commande "Suivant non lu"";
+"2oy-1i-QQP.title" = "Après la commande \"Suivant non lu\"";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "Toutes les 30 minutes";
