--- a/Vienna/Interfaces/it.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/it.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "Ogni 15 minuti";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Dopo il comando "Prossimo Non Letto"";
+"2oy-1i-QQP.title" = "Dopo il comando \"Prossimo Non Letto\"";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "Ogni 30 minuti";
