--- a/Vienna/Interfaces/ja.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/ja.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "15分ごと";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = ""次の未読" コマンドの後";
+"2oy-1i-QQP.title" = "\"次の未読\" コマンドの後";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "３０分ごと";
