--- a/Vienna/Interfaces/ko.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/ko.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "15분마다";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = ""읽지 않은 다음 항목" 명령을 실행한 후에";
+"2oy-1i-QQP.title" = "\"읽지 않은 다음 항목\" 명령을 실행한 후에";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "30분마다";
