--- a/Vienna/Interfaces/nl.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/nl.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "Elke 15 minuten";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Na "Volgende ongelezen"-commando";
+"2oy-1i-QQP.title" = "Na \"Volgende ongelezen\"-commando";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "Elke 30 minuten";
