--- a/Vienna/Interfaces/ru.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/ru.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "Каждые 15 минут";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "По вызову команды "Следующая Непрочитанная"";
+"2oy-1i-QQP.title" = "По вызову команды \"Следующая Непрочитанная\"";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "Каждые 30 минут";
