--- a/Vienna/Interfaces/sv.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/sv.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "Var 15:e minut";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Efter att ha valt "Nästa olästa"";
+"2oy-1i-QQP.title" = "Efter att ha valt \"Nästa olästa\"";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "Var 30:e minut";
