--- a/Vienna/Interfaces/tr.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/tr.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "15 dakikada bir";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = ""Next Unread" komutundan sonra";
+"2oy-1i-QQP.title" = "\"Next Unread\" komutundan sonra";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "30 dakikada bir";
