--- a/Vienna/Interfaces/uk.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/uk.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "Кожні 15 хвилин";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Післи команди "Наступне непрочитане"";
+"2oy-1i-QQP.title" = "Післи команди \"Наступне непрочитане\"";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "Кожні 30 хвилин";
