--- a/Vienna/Interfaces/zh-Hant.lproj/GeneralPreferencesView.strings
+++ b/Vienna/Interfaces/zh-Hant.lproj/GeneralPreferencesView.strings
@@ -2,7 +2,7 @@
 "1Ll-uG-QWh.title" = "每 15 分鐘";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "在 "下一個未閱讀文章" 操作後";
+"2oy-1i-QQP.title" = "在 \"下一個未閱讀文章\" 操作後";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "每 30 分鐘";
