--- a/Vienna/Resources/lt.lproj/Localizable.strings
+++ b/Vienna/Resources/lt.lproj/Localizable.strings
@@ -19,6 +19,9 @@
 /* No comment provided by engineer. */
 "%d new articles retrieved" = "Parsiųsta %d naujų straipsnių";
 
+/* Notification body */
+"%d new unread articles retrieved" = "Parsiųsta naujų neperskaitytų straipsnių";
+
 /* No comment provided by engineer. */
 "%d subscriptions successfully exported" = "Sėkmingai importuota %d naujų prenumeratų";
 
@@ -40,6 +43,9 @@
 /* No comment provided by engineer. */
 "A new plugin has been installed. It is now available from the menu and you can add it to the toolbar." = "Įdiegtas naujas įskiepis. Jį galima rasti meniu ir įsidėti į įrankių juostą.";
 
+/* No comment provided by engineer. */
+"A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "Rasti tekstą";
+
 /* Toolbar item name for the Advanced preference pane */
 "Advanced" = "Papildomi nustatymai";
 
@@ -58,12 +64,6 @@
 /* No comment provided by engineer. */
 "After a Week" = "Po savaitės";
 
-/* Already subscribed body */
-"Already subscribed body" = "Užsiregistravimo turinys";
-
-/* Already subscribed title */
-"Already subscribed title" = "Užsiregistravimo pavadinimas";
-
 /* No comment provided by engineer. */
 "An error occurred when this feed was last refreshed" = "Paskutinįkart atnaujinant šią prenumeratą įvyko klaida";
 
@@ -72,6 +72,24 @@
 
 /* No comment provided by engineer. */
 "AppleScript Error in '%@' script" = "AppleScript klaida skripte '%@'";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete all %d selected folders? This operation cannot be undone." = "Ištrinti keletą aplankų";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete group folder \"%@\" and all sub folders? This operation cannot be undone." = "Ištrinti grupės aplanką";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete smart folder \"%@\"? This will not delete the actual articles matched by the search." = "Ištrinti išmanųjį aplanką";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete the messages in the Trash folder permanently?" = "Ištrinti žinutę iš šiukšlių dėžės";
+
+/* No comment provided by engineer. */
+"Are you sure you want to permanently delete the selected articles?" = "Ištrinti pasirinktą žinutę";
+
+/* No comment provided by engineer. */
+"Are you sure you want to unsubscribe from \"%@\"? This operation will delete all cached articles." = "Ištrinti RSS prenumeratą";
 
 /* No comment provided by engineer. */
 "Articles" = "Straipsniai";
@@ -90,34 +108,22 @@
 "Cancel" = "Atšaukti";
 
 /* No comment provided by engineer. */
-"Cannot create database folder text" = "Nepavyko sukurti duomenų bazių aplanko teksto";
+"Cannot create export output file" = "Nepavyko atidaryti eksportuoto failo";
 
 /* No comment provided by engineer. */
-"Cannot create database folder title" = "Nepavyko sukurti duomenų bazės aplanko pavadinimo";
+"Cannot create folder" = "Nepavyko sukurti aplanko pavadinimo";
 
 /* No comment provided by engineer. */
-"Cannot create folder body" = "Nepavyko sukurti aplanko turinio";
+"Cannot create the Vienna database" = "Rasti pavadinimą";
 
 /* No comment provided by engineer. */
-"Cannot create folder title" = "Nepavyko sukurti aplanko pavadinimo";
-
-/* No comment provided by engineer. */
-"Cannot open database text" = "Nepavyko atidaryti duomenų bazės";
-
-/* No comment provided by engineer. */
-"Cannot open database title" = "Nepavyko atidaryti duomenų bazės";
-
-/* No comment provided by engineer. */
-"Cannot open export file message" = "Nepavyko atidaryti eksportuoto failo";
-
-/* No comment provided by engineer. */
-"Cannot open export file message text" = "Nepavyko atidaryti eksportuoto failo";
+"Cannot import the specified file. The file contents are not valid OPML XML format." = "Klaida importuojant prenumeratas";
 
 /* No comment provided by engineer. */
 "Cannot rename folder" = "Nepavyko pervadinti aplanko";
 
 /* No comment provided by engineer. */
-"Clear" = "Išvalyti";
+"Clear Recent Searches" = "Išvalyti";
 
 /* No comment provided by engineer. */
 "Click the Open button to open this file." = "Spustelkite ant mygtuko Atidaryti, kad atvertumėte failą.";
@@ -144,9 +150,6 @@
 "Copy URL" = "Kopijuoti adresą";
 
 /* No comment provided by engineer. */
-"Credentials Prompt" = "Prisijungimo duomenų įvedimas";
-
-/* No comment provided by engineer. */
 "Database Upgrade" = "Duomenų bazės atnaujinimas";
 
 /* Data field name visible in menu/article list/smart folder definition */
@@ -160,49 +163,28 @@
 "Delete Article" = "Ištrinti straipsnį";
 
 /* No comment provided by engineer. */
-"Delete folder status" = "Ištrinti aplanką";
-
-/* No comment provided by engineer. */
 "Delete group folder" = "Ištrinti grupės aplanką";
-
-/* No comment provided by engineer. */
-"Delete group folder text" = "Ištrinti grupės aplanką";
 
 /* No comment provided by engineer. */
 "Delete multiple folders" = "Ištrinti keletą aplankų";
 
 /* No comment provided by engineer. */
-"Delete multiple folders text" = "Ištrinti keletą aplankų";
-
-/* No comment provided by engineer. */
 "Delete Open Reader RSS feed" = "Ištrinti Open Reader RSS prenumeratą";
-
-/* No comment provided by engineer. */
-"Delete Open Reader RSS feed text" = "Ištrinti Open Reader RSS prenumeratą";
-
-/* No comment provided by engineer. */
-"Delete RSS feed" = "Ištrinti RSS prenumeratą";
-
-/* No comment provided by engineer. */
-"Delete RSS feed text" = "Ištrinti RSS prenumeratą";
-
-/* No comment provided by engineer. */
-"Delete selected message" = "Ištrinti pasirinktą žinutę";
-
-/* No comment provided by engineer. */
-"Delete selected message text" = "Ištrinti pasirinktą žinutę";
 
 /* No comment provided by engineer. */
 "Delete smart folder" = "Ištrinti išmanųjį aplanką";
 
 /* No comment provided by engineer. */
-"Delete smart folder text" = "Ištrinti išmanųjį aplanką";
+"Delete subscription" = "Ištrinti RSS prenumeratą";
 
 /* Title of a menu item */
 "Delete…" = "Ištrinti…";
 
 /* Data field name visible in smart folder definition */
 "Deleted" = "Ištrinta";
+
+/* No comment provided by engineer. */
+"Deleting folder \"%@\"…" = "Ištrinti aplanką";
 
 /* No comment provided by engineer. */
 "Descending" = "Mažėjimo tvarka";
@@ -228,38 +210,23 @@
 /* Notification title */
 "Download failed" = "Atsisiųsti nepavyko";
 
-/* No comment provided by engineer. */
-"Downloads Running" = "Vykstantys parsisiuntimai";
-
-/* No comment provided by engineer. */
-"Downloads Running text" = "Vykstantys parsisiuntimai";
-
 /* Title of a menu item */
 "Edit…" = "Keisti…";
 
 /* Title of a button on an alert */
 "Empty" = "Tuščia";
 
-/* No comment provided by engineer. */
-"Empty Trash message" = "Ištrinti žinutę iš šiukšlių dėžės";
-
-/* No comment provided by engineer. */
-"Empty Trash message text" = "Ištrinti žinutę iš šiukšlių dėžės";
+/* Data field name (Y/N) visible in menu/smart folder definition */
+"Enclosure" = "Turi įtalpinto turinio";
 
 /* Data field name (URL) visible in menu/article list */
-"Enclosure" = "Įtalpintas turinys";
+"Enclosure URL" = "Įtalpintas turinys";
 
 /* No comment provided by engineer. */
 "Enter the URL here" = "Įveskite nuorodą";
 
-/* No comment provided by engineer. */
+/* Already subscribed title */
 "Error" = "Klaida";
-
-/* No comment provided by engineer. */
-"Error importing subscriptions body" = "Klaida importuojant prenumeratas";
-
-/* No comment provided by engineer. */
-"Error importing subscriptions title" = "Klaida importuojant prenumeratas";
 
 /* No comment provided by engineer. */
 "Error loading script '%@'" = "Klaida kraunant skriptą '%@'";
@@ -277,6 +244,9 @@
 "Error: Feed not found!" = "Klaida: prenumerata nerasta!";
 
 /* No comment provided by engineer. */
+"Export Completed" = "RSS prenumeratos eksportavimo pavadinimas";
+
+/* No comment provided by engineer. */
 "External Browser" = "Išorinė naršyklė";
 
 /* No comment provided by engineer. */
@@ -290,6 +260,9 @@
 
 /* Notification body */
 "File %@ failed to download" = "Nepavyko parsiųsti failo %@";
+
+/* No comment provided by engineer. */
+"Filter in %@" = "Ieškoti %@";
 
 /* No comment provided by engineer. */
 "Flag" = "Pažymėti";
@@ -324,9 +297,6 @@
 /* No comment provided by engineer. */
 "Got HTTP status 304 - No news from last check" = "HTTP statusas 304 - Nuo paskutinio patikrinimo neatsirado naujienų";
 
-/* Data field name (Y/N) visible in menu/smart folder definition */
-"HasEnclosure" = "Turi įtalpinto turinio";
-
 /* Pseudo field name visible in article list */
 "Headlines" = "Antraštės";
 
@@ -342,20 +312,23 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "Serveris pateikė HTTP kodą %d";
 
+/* No comment provided by engineer. */
+"If you quit Vienna now, all downloads will stop." = "Vykstantys parsisiuntimai";
+
 /* Title of a button on an alert */
 "Import" = "Importuoti";
+
+/* No comment provided by engineer. */
+"Import Completed" = "RSS prenumeratos importavimo pavadinimas";
+
+/* No comment provided by engineer. */
+"Import error" = "Klaida importuojant prenumeratas";
 
 /* No comment provided by engineer. */
 "Import subscriptions from OPML file?" = "Importuoti prenumeratas iš OPML failo?";
 
 /* No comment provided by engineer. */
 "Improper infinitely looping URL redirect to %@" = "Klaida: nesibaigiantis peradresavimas į %@";
-
-/* No comment provided by engineer. */
-"Invalid style body" = "Neteisingas stilius";
-
-/* No comment provided by engineer. */
-"Invalid style title" = "Neteisingas stilius";
 
 /* test for a value */
 "is" = "yra";
@@ -399,14 +372,11 @@
 /* No comment provided by engineer. */
 "Loading" = "Įkeliama";
 
-/* No comment provided by engineer. */
-"Locate Text" = "Rasti tekstą";
-
-/* No comment provided by engineer. */
-"Locate Title" = "Rasti pavadinimą";
-
 /* Title of a button on an alert */
 "Locate…" = "Rasti…";
+
+/* No comment provided by engineer. */
+"Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences.\nAlso check your network access." = "Open Reader autentikacija nepavyko";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "Viską pažymėti kaip perskaityta";
@@ -445,16 +415,7 @@
 "New articles retrieved" = "Parsiųsta naujų straipsnių";
 
 /* No comment provided by engineer. */
-"New style body" = "Naujas stilius";
-
-/* No comment provided by engineer. */
-"New style title" = "Naujas stilius";
-
-/* No comment provided by engineer. */
 "New Tab" = "Naujas skirtukas";
-
-/* Notification body */
-"New unread articles retrieved" = "Parsiųsta naujų neperskaitytų straipsnių";
 
 /* No comment provided by engineer. */
 "No" = "Ne";
@@ -470,6 +431,9 @@
 
 /* Title of a button on an alert */
 "OK" = "Gerai";
+
+/* No comment provided by engineer. */
+"One or more downloads are in progress" = "Vykstantys parsisiuntimai";
 
 /* Title of a popup menu item */
 "Open" = "Atidaryti";
@@ -503,9 +467,6 @@
 
 /* No comment provided by engineer. */
 "Open Reader Authentication Failed" = "Open Reader autentikacija nepavyko";
-
-/* No comment provided by engineer. */
-"Open Reader Authentication Failed text" = "Open Reader autentikacija nepavyko";
 
 /* No comment provided by engineer. */
 "Open Scripts Folder" = "Atidaryti skriptų aplanką";
@@ -581,7 +542,7 @@
 "Restore Article" = "Atstatyti straipsnius";
 
 /* No comment provided by engineer. */
-"Resubscribe" = "Prenumeruoti iš naujo";
+"Resubscribe to Feed" = "Prenumeruoti iš naujo";
 
 /* No comment provided by engineer. */
 "Retrieving articles" = "Prenumeratos parsiunčiamos";
@@ -598,12 +559,6 @@
 /* No comment provided by engineer. */
 "RSS Icon not found!" = "RSS prenumeratos paveikslėlis nerastas!";
 
-/* No comment provided by engineer. */
-"RSS Subscription Export Title" = "RSS prenumeratos eksportavimo pavadinimas";
-
-/* No comment provided by engineer. */
-"RSS Subscription Import Title" = "RSS prenumeratos importavimo pavadinimas";
-
 /* Placeholder title of a search field */
 "Search all articles" = "Ieškoti visuose straipsniuose";
 
@@ -612,9 +567,6 @@
 
 /* Placeholder title of a search field */
 "Search current web page" = "Ieškoti šiame puslapyje";
-
-/* No comment provided by engineer. */
-"Search in %@" = "Ieškoti %@";
 
 /* No comment provided by engineer. */
 "Search Results" = "Paieškos rezultatai";
@@ -643,6 +595,12 @@
 /* Title of a menu item */
 "Show Toolbar" = "Rodyti įrankių juostą";
 
+/* No comment provided by engineer. */
+"Sorry but Vienna was unable to open the database" = "Nepavyko atidaryti duomenų bazės";
+
+/* No comment provided by engineer. */
+"Sorry, but Vienna was unable to create the database folder" = "Nepavyko sukurti duomenų bazės aplanko pavadinimo";
+
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "Tema";
 
@@ -659,7 +617,37 @@
 "Text" = "Tekstas";
 
 /* No comment provided by engineer. */
+"The \"%@\" folder cannot be created." = "Nepavyko sukurti aplanko turinio";
+
+/* No comment provided by engineer. */
+"The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "Neatpažintas duomenų bazės formatas";
+
+/* No comment provided by engineer. */
+"The database file (%@) could not be opened for some reason. It may be corrupted or inaccessible. Please delete or rename the database file and restart Vienna." = "Nepavyko atidaryti duomenų bazės";
+
+/* No comment provided by engineer. */
+"The database file format has changed" = "Neatpažintas duomenų bazės formatas";
+
+/* No comment provided by engineer. */
+"The Default style will be used instead." = "Neteisingas stilius";
+
+/* No comment provided by engineer. */
+"The specified export output file could not be created. Check that it is not locked and no other application is using it." = "Nepavyko atidaryti eksportuoto failo";
+
+/* No comment provided by engineer. */
+"The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "Naujas stilius";
+
+/* No comment provided by engineer. */
+"The style %@ appears to be missing or corrupted" = "Neteisingas stilius";
+
+/* No comment provided by engineer. */
+"The subscription for \"%@\" requires a user name and password for access." = "Prisijungimo duomenų įvedimas";
+
+/* No comment provided by engineer. */
 "This article contains an enclosed file." = "Šiame straipsnyje yra failas.";
+
+/* No comment provided by engineer. */
+"This operation cannot be undone." = "Ištrinti pasirinktą žinutę";
 
 /* No comment provided by engineer. */
 "Today" = "Šiandien";
@@ -680,13 +668,10 @@
 "Unread Articles" = "Neperskaityti straipsniai";
 
 /* No comment provided by engineer. */
-"Unrecognised database format text" = "Neatpažintas duomenų bazės formatas";
+"Unsubscribe from Feed" = "Atsisakyti prenumeratos";
 
 /* No comment provided by engineer. */
-"Unrecognised database format title" = "Neatpažintas duomenų bazės formatas";
-
-/* No comment provided by engineer. */
-"Unsubscribe" = "Atsisakyti prenumeratos";
+"Unsubscribing from an Open Reader RSS feed will also remove your locally cached articles." = "Ištrinti Open Reader RSS prenumeratą";
 
 /* Title of a button on an alert */
 "Upgrade Database" = "Atnaujinti nuomenų bazės versiją į naujesnę";
@@ -695,23 +680,35 @@
 "URL" = "Nuoroda";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file body" = "Vienna negali atidaryti failo";
+"Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "Vienna negali atidaryti failo";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file title" = "Vienna negali atidaryti failo";
+"Vienna cannot open the file." = "Vienna negali atidaryti failo";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file body" = "Vienna negali atidaryti failo";
+"Vienna cannot show the file \"%@\" because it moved since you downloaded it." = "Vienna negali atidaryti failo";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file title" = "Vienna negali atidaryti failo";
+"Vienna cannot show the file." = "Vienna negali atidaryti failo";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "Vienna privalo atnaujinti duomenų bazes versiją į naujesnę. Tai gali užtrukti apie minutę. Atsiprašome dėl nepatogumų.";
+"Vienna has installed a new style" = "Naujas stilius";
+
+/* No comment provided by engineer. */
+"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconvenience." = "Vienna privalo atnaujinti duomenų bazes versiją į naujesnę. Tai gali užtrukti apie minutę. Atsiprašome dėl nepatogumų.";
+
+/* No comment provided by engineer. */
+"Vienna was trying to create the folder \"%@\" but an error occurred. Check the permissions on the folders on the path specified." = "Nepavyko sukurti duomenų bazių aplanko teksto";
 
 /* No comment provided by engineer. */
 "Yes" = "Taip";
 
 /* No comment provided by engineer. */
 "Yesterday" = "Vakar";
+
+/* You are already subscribed to that feed */
+"You are already subscribed to that feed" = "Užsiregistravimo turinys";
+
+/* No comment provided by engineer. */
+"You cannot undo this action" = "Ištrinti žinutę iš šiukšlių dėžės";
 
