--- a/Vienna/Resources/pt-BR.lproj/Localizable.strings
+++ b/Vienna/Resources/pt-BR.lproj/Localizable.strings
@@ -7,6 +7,9 @@
 /* No comment provided by engineer. */
 "%d new articles retrieved" = "%d novos artigos descarregados";
 
+/* Notification body */
+"%d new unread articles retrieved" = "%d novos artigos recebidos";
+
 /* No comment provided by engineer. */
 "%d subscriptions successfully exported" = "%d assinaturas exportadas com sucesso";
 
@@ -24,6 +27,9 @@
 
 /* No comment provided by engineer. */
 "A folder with that name already exists" = "Uma pasta com este nome já existe";
+
+/* No comment provided by engineer. */
+"A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "Um novo arquivo de dados do Vienna não pode ser criado em \"%@\" pois a pasta está provavelmente localizada em um disco de rede e esta versão do Vienna não gerencia dados remotos. Por favor escolha uma pasta alternativa que esteja localizada em seu computador.";
 
 /* Toolbar item name for the Advanced preference pane */
 "Advanced" = "Avançado";
@@ -43,17 +49,29 @@
 /* No comment provided by engineer. */
 "After a Week" = "Após uma Semana";
 
-/* Already subscribed body */
-"Already subscribed body" = "você já assinou estas notícias";
-
-/* Already subscribed title */
-"Already subscribed title" = "Erro";
-
 /* No comment provided by engineer. */
 "An error occurred when this feed was last refreshed" = "Um erro ocorreu quando estas notícias foram atualizadas";
 
 /* Toolbar item name for the Appearance preference pane */
 "Appearance" = "Aparência";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete all %d selected folders? This operation cannot be undone." = "Você tem certeza que deseja apagar todas as %d pastas selecionadas? Esta operação não pode ser desfeita.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete group folder \"%@\" and all sub folders? This operation cannot be undone." = "Você tem certeza que deseja apagar a pasta de grupo \"%@\" e todas as pastas internas? Esta operação não pode ser desfeita.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete smart folder \"%@\"? This will not delete the actual articles matched by the search." = "Você tem certeza que deseja apagar a pasta inteligente \"%@\"? Isto não apagará os artigos que correspondem às pesquisas da pasta.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete the messages in the Trash folder permanently?" = "Tem certeza que deseja apagar as mensagens do Lixo permanentemente?";
+
+/* No comment provided by engineer. */
+"Are you sure you want to permanently delete the selected articles?" = "Você tem certeza de que deseja apagar permanentemente os estilos selecionados?";
+
+/* No comment provided by engineer. */
+"Are you sure you want to unsubscribe from \"%@\"? This operation will delete all cached articles." = "Você tem certeza que deseja cancelar a assinatura de \"%@\"? Esta operação apagará todas os artigos guardados em cache.";
 
 /* No comment provided by engineer. */
 "Articles" = "Artigos";
@@ -69,34 +87,22 @@
 "Cancel" = "Cancelar";
 
 /* No comment provided by engineer. */
-"Cannot create database folder text" = "Vienna tentou criar a pasta \"%@\" mas um erro ocorreu. Verifique as permissões nas pastas do caminho especificado.";
+"Cannot create export output file" = "Impossível criar arquivo de exportação";
 
 /* No comment provided by engineer. */
-"Cannot create database folder title" = "Desculpe, mas o Vienna não pode criar a pasta de dados";
+"Cannot create folder" = "Não foi possível criar pasta";
 
 /* No comment provided by engineer. */
-"Cannot create folder body" = "A pasta \"%@\" não pode ser criada.";
+"Cannot create the Vienna database" = "Impossível criar arquivo de dados do Vienna";
 
 /* No comment provided by engineer. */
-"Cannot create folder title" = "Não foi possível criar pasta";
-
-/* No comment provided by engineer. */
-"Cannot open database text" = "O arquivo de dados (%@) não pode ser aberto por alguma razão. Ele deve estar corrompido ou inacessível. Por favor apague ou renomeie o arquivo de dados e reinicie o Vienna.";
-
-/* No comment provided by engineer. */
-"Cannot open database title" = "Desculpe, mas o Vienna foi incapaz de abrir o arquivo de dados";
-
-/* No comment provided by engineer. */
-"Cannot open export file message" = "Impossível criar arquivo de exportação";
-
-/* No comment provided by engineer. */
-"Cannot open export file message text" = "O arquivo de exportação especificado não pode ser criado. Verifique se não está travado ou se outro programa não o está usando.";
+"Cannot import the specified file. The file contents are not valid OPML XML format." = "Impossível importar o arquivo especificado. O conteúdo do arquivo não tem format OPML XML válido.";
 
 /* No comment provided by engineer. */
 "Cannot rename folder" = "Impossível renomear pasta";
 
 /* No comment provided by engineer. */
-"Clear" = "Limpar Pesquisas Recentes";
+"Clear Recent Searches" = "Limpar Pesquisas Recentes";
 
 /* No comment provided by engineer. */
 "Click the Open button to open this file." = "Clique no botão Abrir para abrir este arquivo.";
@@ -117,9 +123,6 @@
 "Copy Page Link to Clipboard" = "Copiar Link da Página para a Área de Transferência";
 
 /* No comment provided by engineer. */
-"Credentials Prompt" = "A assinatura de \"%@\" requer um usuário e senha cadastrados para acesso.";
-
-/* No comment provided by engineer. */
 "Database Upgrade" = "Atualização de Banco de Dados";
 
 /* Data field name visible in menu/article list/smart folder definition */
@@ -133,49 +136,28 @@
 "Delete Article" = "Apagar Artigo";
 
 /* No comment provided by engineer. */
-"Delete folder status" = "Apagando pasta \"%@\"…";
-
-/* No comment provided by engineer. */
 "Delete group folder" = "Apagar pasta de grupo";
-
-/* No comment provided by engineer. */
-"Delete group folder text" = "Você tem certeza que deseja apagar a pasta de grupo \"%@\" e todas as pastas internas? Esta operação não pode ser desfeita.";
 
 /* No comment provided by engineer. */
 "Delete multiple folders" = "Apagar múltiplas pastas";
 
 /* No comment provided by engineer. */
-"Delete multiple folders text" = "Você tem certeza que deseja apagar todas as %d pastas selecionadas? Esta operação não pode ser desfeita.";
-
-/* No comment provided by engineer. */
 "Delete Open Reader RSS feed" = "Excluir Assinatura RSS do Open Reader";
-
-/* No comment provided by engineer. */
-"Delete Open Reader RSS feed text" = "Excluir Assinatura RSS do Open Reader";
-
-/* No comment provided by engineer. */
-"Delete RSS feed" = "Apagar assinaturas";
-
-/* No comment provided by engineer. */
-"Delete RSS feed text" = "Você tem certeza que deseja cancelar a assinatura de \"%@\"? Esta operação apagará todas os artigos guardados em cache.";
-
-/* No comment provided by engineer. */
-"Delete selected message" = "Você tem certeza de que deseja apagar permanentemente os estilos selecionados?";
-
-/* No comment provided by engineer. */
-"Delete selected message text" = "Esta operação não pode ser desfeita.";
 
 /* No comment provided by engineer. */
 "Delete smart folder" = "Apagar pasta inteligente";
 
 /* No comment provided by engineer. */
-"Delete smart folder text" = "Você tem certeza que deseja apagar a pasta inteligente \"%@\"? Isto não apagará os artigos que correspondem às pesquisas da pasta.";
+"Delete subscription" = "Apagar assinaturas";
 
 /* Title of a menu item */
 "Delete…" = "Apagar…";
 
 /* Data field name visible in smart folder definition */
 "Deleted" = "Apagado";
+
+/* No comment provided by engineer. */
+"Deleting folder \"%@\"…" = "Apagando pasta \"%@\"…";
 
 /* No comment provided by engineer. */
 "Descending" = "Decrescente";
@@ -201,41 +183,29 @@
 /* Notification title */
 "Download failed" = "Descarregamento falhou";
 
-/* No comment provided by engineer. */
-"Downloads Running" = "Um ou mais descarregamentos estão ocorrendo";
-
-/* No comment provided by engineer. */
-"Downloads Running text" = "Deseja cancelar todos os descarregamentos e fechar o Vienna agora?";
-
 /* Title of a menu item */
 "Edit…" = "Editar…";
 
 /* Title of a button on an alert */
 "Empty" = "Esvaziar";
 
-/* No comment provided by engineer. */
-"Empty Trash message" = "Tem certeza que deseja apagar as mensagens do Lixo permanentemente?";
-
-/* No comment provided by engineer. */
-"Empty Trash message text" = "Você não poderá desfazer essa ação";
+/* Data field name (Y/N) visible in menu/smart folder definition */
+"Enclosure" = "Anexo";
 
 /* Data field name (URL) visible in menu/article list */
-"Enclosure" = "URL do Anexo";
+"Enclosure URL" = "URL do Anexo";
 
 /* No comment provided by engineer. */
 "Enter the URL here" = "Entre com a URL aqui";
 
-/* No comment provided by engineer. */
+/* Already subscribed title */
 "Error" = "Erro";
 
 /* No comment provided by engineer. */
-"Error importing subscriptions body" = "Impossível importar o arquivo especificado. O conteúdo do arquivo não tem format OPML XML válido.";
-
-/* No comment provided by engineer. */
-"Error importing subscriptions title" = "Erro de Importação";
-
-/* No comment provided by engineer. */
 "Error parsing XML data in feed" = "Erro ao decodificar dados XML na notícia";
+
+/* No comment provided by engineer. */
+"Export Completed" = "Exportação Completada";
 
 /* No comment provided by engineer. */
 "External Browser" = "Navegador Externo";
@@ -248,6 +218,9 @@
 
 /* Notification body */
 "File %@ failed to download" = "Arquivo %@ falhou de ser descarregado";
+
+/* No comment provided by engineer. */
+"Filter in %@" = "Pesquisar em %@";
 
 /* No comment provided by engineer. */
 "Flag" = "Marcar";
@@ -273,9 +246,6 @@
 /* No comment provided by engineer. */
 "Go forward to the next page" = "Avançara para a próxima página";
 
-/* Data field name (Y/N) visible in menu/smart folder definition */
-"HasEnclosure" = "Anexo";
-
 /* Pseudo field name visible in article list */
 "Headlines" = "Manchetes";
 
@@ -288,17 +258,20 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "Código HTTP %d relatado do servidor";
 
+/* No comment provided by engineer. */
+"If you quit Vienna now, all downloads will stop." = "Deseja cancelar todos os descarregamentos e fechar o Vienna agora?";
+
 /* Title of a button on an alert */
 "Import" = "Importar";
 
 /* No comment provided by engineer. */
+"Import Completed" = "Importação Completada";
+
+/* No comment provided by engineer. */
+"Import error" = "Erro de Importação";
+
+/* No comment provided by engineer. */
 "Import subscriptions from OPML file?" = "Importar assinaturas de um arquivo OPML?";
-
-/* No comment provided by engineer. */
-"Invalid style body" = "O estilo Padrão será usado.";
-
-/* No comment provided by engineer. */
-"Invalid style title" = "O estilo %@ parece estar corrompido";
 
 /* test for a value */
 "is" = "é";
@@ -332,12 +305,6 @@
 
 /* No comment provided by engineer. */
 "Last Week" = "Última Semana";
-
-/* No comment provided by engineer. */
-"Locate Text" = "Um novo arquivo de dados do Vienna não pode ser criado em \"%@\" pois a pasta está provavelmente localizada em um disco de rede e esta versão do Vienna não gerencia dados remotos. Por favor escolha uma pasta alternativa que esteja localizada em seu computador.";
-
-/* No comment provided by engineer. */
-"Locate Title" = "Impossível criar arquivo de dados do Vienna";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "Marcar Todos os Artigos como Lidos";
@@ -376,22 +343,16 @@
 "New articles retrieved" = "Novos Artigos";
 
 /* No comment provided by engineer. */
-"New style body" = "O estilo \"%@\" foi instalado em sua pasta de Estilos e adicionado no menu de Estilos.";
-
-/* No comment provided by engineer. */
-"New style title" = "Vienna instalou um novo estilo";
-
-/* No comment provided by engineer. */
 "New Tab" = "Nova Aba";
-
-/* Notification body */
-"New unread articles retrieved" = "%d novos artigos recebidos";
 
 /* No comment provided by engineer. */
 "No" = "Não";
 
 /* No comment provided by engineer. */
 "No new articles available" = "Nenhum artigo novo disponível";
+
+/* No comment provided by engineer. */
+"One or more downloads are in progress" = "Um ou mais descarregamentos estão ocorrendo";
 
 /* Title of a popup menu item */
 "Open" = "Abrir";
@@ -488,7 +449,7 @@
 "Restore Article" = "Restaurar Artigo";
 
 /* No comment provided by engineer. */
-"Resubscribe" = "Re-assinar";
+"Resubscribe to Feed" = "Re-assinar";
 
 /* No comment provided by engineer. */
 "Retrieving articles" = "Recebendo Artigos";
@@ -499,12 +460,6 @@
 /* No comment provided by engineer. */
 "Return to the previous page" = "Retornar para a página anterior";
 
-/* No comment provided by engineer. */
-"RSS Subscription Export Title" = "Exportação Completada";
-
-/* No comment provided by engineer. */
-"RSS Subscription Import Title" = "Importação Completada";
-
 /* Placeholder title of a search field */
 "Search all articles" = "Pesquisar todos os artigos";
 
@@ -513,9 +468,6 @@
 
 /* Placeholder title of a search field */
 "Search current web page" = "Pesquisar na página web atual";
-
-/* No comment provided by engineer. */
-"Search in %@" = "Pesquisar em %@";
 
 /* No comment provided by engineer. */
 "Search Results" = "Pesquisar Resultados";
@@ -541,6 +493,12 @@
 /* Title of a menu item */
 "Show Toolbar" = "Mostrar barra de ferramentas";
 
+/* No comment provided by engineer. */
+"Sorry but Vienna was unable to open the database" = "Desculpe, mas o Vienna foi incapaz de abrir o arquivo de dados";
+
+/* No comment provided by engineer. */
+"Sorry, but Vienna was unable to create the database folder" = "Desculpe, mas o Vienna não pode criar a pasta de dados";
+
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "Assunto";
 
@@ -557,7 +515,37 @@
 "Text" = "Texto";
 
 /* No comment provided by engineer. */
+"The \"%@\" folder cannot be created." = "A pasta \"%@\" não pode ser criada.";
+
+/* No comment provided by engineer. */
+"The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "O formato do arquivo de dados(%@) não possui suporte nessa versão do Vienna. Apague ou renomeie o arquivo e reinicie o Vienna.";
+
+/* No comment provided by engineer. */
+"The database file (%@) could not be opened for some reason. It may be corrupted or inaccessible. Please delete or rename the database file and restart Vienna." = "O arquivo de dados (%@) não pode ser aberto por alguma razão. Ele deve estar corrompido ou inacessível. Por favor apague ou renomeie o arquivo de dados e reinicie o Vienna.";
+
+/* No comment provided by engineer. */
+"The database file format has changed" = "O formato do arquivo de dados foi alterado";
+
+/* No comment provided by engineer. */
+"The Default style will be used instead." = "O estilo Padrão será usado.";
+
+/* No comment provided by engineer. */
+"The specified export output file could not be created. Check that it is not locked and no other application is using it." = "O arquivo de exportação especificado não pode ser criado. Verifique se não está travado ou se outro programa não o está usando.";
+
+/* No comment provided by engineer. */
+"The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "O estilo \"%@\" foi instalado em sua pasta de Estilos e adicionado no menu de Estilos.";
+
+/* No comment provided by engineer. */
+"The style %@ appears to be missing or corrupted" = "O estilo %@ parece estar corrompido";
+
+/* No comment provided by engineer. */
+"The subscription for \"%@\" requires a user name and password for access." = "A assinatura de \"%@\" requer um usuário e senha cadastrados para acesso.";
+
+/* No comment provided by engineer. */
 "This article contains an enclosed file." = "Este artigo contém um arquivo anexado.";
+
+/* No comment provided by engineer. */
+"This operation cannot be undone." = "Esta operação não pode ser desfeita.";
 
 /* No comment provided by engineer. */
 "Today" = "Hoje";
@@ -575,35 +563,44 @@
 "Unread Articles" = "Artigos Não Lidos";
 
 /* No comment provided by engineer. */
-"Unrecognised database format text" = "O formato do arquivo de dados(%@) não possui suporte nessa versão do Vienna. Apague ou renomeie o arquivo e reinicie o Vienna.";
+"Unsubscribe from Feed" = "Cancelar Assinatura";
 
 /* No comment provided by engineer. */
-"Unrecognised database format title" = "O formato do arquivo de dados foi alterado";
-
-/* No comment provided by engineer. */
-"Unsubscribe" = "Cancelar Assinatura";
+"Unsubscribing from an Open Reader RSS feed will also remove your locally cached articles." = "Excluir Assinatura RSS do Open Reader";
 
 /* Title of a button on an alert */
 "Upgrade Database" = "Atualizar Banco de Dados";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file body" = "Vienna não pode abrir o arquivo \"%@\" pois ele foi movido desde que foi descarregado.";
+"Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "Vienna não pode abrir o arquivo \"%@\" pois ele foi movido desde que foi descarregado.";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file title" = "Vienna não pode abrir o arquivo.";
+"Vienna cannot open the file." = "Vienna não pode abrir o arquivo.";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file body" = "Vienna não pode mostrar o arquivo \"%@\" pois ele foi movido desde que foi descarregado.";
+"Vienna cannot show the file \"%@\" because it moved since you downloaded it." = "Vienna não pode mostrar o arquivo \"%@\" pois ele foi movido desde que foi descarregado.";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file title" = "Vienna não pode mostrar o arquivo.";
+"Vienna cannot show the file." = "Vienna não pode mostrar o arquivo.";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "O Vienna precisa atualizar seu banco de dados para a última versão.  Isto pode demorar um minuto ou dois.  Pedimos desculpas pelo inconveniente.";
+"Vienna has installed a new style" = "Vienna instalou um novo estilo";
+
+/* No comment provided by engineer. */
+"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconvenience." = "O Vienna precisa atualizar seu banco de dados para a última versão.  Isto pode demorar um minuto ou dois.  Pedimos desculpas pelo inconveniente.";
+
+/* No comment provided by engineer. */
+"Vienna was trying to create the folder \"%@\" but an error occurred. Check the permissions on the folders on the path specified." = "Vienna tentou criar a pasta \"%@\" mas um erro ocorreu. Verifique as permissões nas pastas do caminho especificado.";
 
 /* No comment provided by engineer. */
 "Yes" = "Sim";
 
 /* No comment provided by engineer. */
 "Yesterday" = "Ontem";
+
+/* You are already subscribed to that feed */
+"You are already subscribed to that feed" = "você já assinou estas notícias";
+
+/* No comment provided by engineer. */
+"You cannot undo this action" = "Você não poderá desfazer essa ação";
 
