--- a/Vienna/Resources/pt.lproj/Localizable.strings
+++ b/Vienna/Resources/pt.lproj/Localizable.strings
@@ -10,6 +10,9 @@
 /* No comment provided by engineer. */
 "%d new articles retrieved" = "%d novos artigos recebidos";
 
+/* Notification body */
+"%d new unread articles retrieved" = "%d novos artigos recebidos";
+
 /* No comment provided by engineer. */
 "%d subscriptions successfully exported" = "%d subscrições exportadas com sucesso";
 
@@ -27,6 +30,9 @@
 
 /* No comment provided by engineer. */
 "A folder with that name already exists" = "Já existe uma pasta com esse nome";
+
+/* No comment provided by engineer. */
+"A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "Uma nova base de dados do Vienna não pode ser criada em \"%@\" porque provavelmente a pasta está localizada num disco de rede e esta versão do Vienna não consegue manipular bases de dados remotas. Por favor escolha uma máquina que esteja localizada no seu computador.";
 
 /* Toolbar item name for the Advanced preference pane */
 "Advanced" = "Avançado";
@@ -46,17 +52,29 @@
 /* No comment provided by engineer. */
 "After a Week" = "Após uma Semana";
 
-/* Already subscribed body */
-"Already subscribed body" = "Fonte já subscrita";
-
-/* Already subscribed title */
-"Already subscribed title" = "Erro";
-
 /* No comment provided by engineer. */
 "An error occurred when this feed was last refreshed" = "Ocorreu um erro da última vez que esta fonte foi actualizada";
 
 /* Toolbar item name for the Appearance preference pane */
 "Appearance" = "Aparência";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete all %d selected folders? This operation cannot be undone." = "Tem a certeza que deseja apagar todas as %d pastas seleccionadas? Esta operação não pode ser anulada.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete group folder \"%@\" and all sub folders? This operation cannot be undone." = "Tem a certeza que deseja apagar a pasta de grupo \"%@\" e todas as sub-pastas? Esta operação não pode ser anulada.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete smart folder \"%@\"? This will not delete the actual articles matched by the search." = "tem a certeza que deseja apagar a pasta inteligente \"%@\"? Isto não vai apagar os artigos actualmente associados à procura.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete the messages in the Trash folder permanently?" = "Tem a certeza que deseja apagar as pastas que estão no lixo permanentemente?";
+
+/* No comment provided by engineer. */
+"Are you sure you want to permanently delete the selected articles?" = "Tem a certeza que deseja apagar permanentemente os estilos seleccionados?";
+
+/* No comment provided by engineer. */
+"Are you sure you want to unsubscribe from \"%@\"? This operation will delete all cached articles." = "Tem a certeza que deseja anular a subcrição de \"%@\"? Esta operação vai apagar todos os artigos em cache.";
 
 /* No comment provided by engineer. */
 "Articles" = "Artigos";
@@ -69,28 +87,19 @@
 "Cancel" = "Cancelar";
 
 /* No comment provided by engineer. */
-"Cannot create database folder text" = "o Vienna estava a tentar criar a pasta \"%@\" mas ocurreu um erro. Verifique as permissões das pastas na localização especificada.";
+"Cannot create export output file" = "Não é possível criar o ficheiro de exportação";
 
 /* No comment provided by engineer. */
-"Cannot create database folder title" = "Desculpe, mas o Vienna não conseguiu criar a pasta da base de dados";
+"Cannot create the Vienna database" = "Não é possível criar a base de dados do Vienna";
 
 /* No comment provided by engineer. */
-"Cannot open database text" = "O ficheiro da base de dados (%@) não pode ser aberto por alguma razão. Pode estar corrompido ou inacessível. Por favor apague ou mude o nome do ficheiro da base de dados e reinicie o Vienna.";
-
-/* No comment provided by engineer. */
-"Cannot open database title" = "Desculpe mas o Vienna não consegue abrir a base de dados";
-
-/* No comment provided by engineer. */
-"Cannot open export file message" = "Não é possível criar o ficheiro de exportação";
-
-/* No comment provided by engineer. */
-"Cannot open export file message text" = "O ficheiro de exprtação não pode ser criado. Verifique se não está bloqueado e não está outra aplicação a usá-lo.";
+"Cannot import the specified file. The file contents are not valid OPML XML format." = "Não é possível importar o ficheiro especificado. O conteúdo do ficheiro não é um formato OPML XML válido.";
 
 /* No comment provided by engineer. */
 "Cannot rename folder" = "Não é possível renomear a pasta";
 
 /* No comment provided by engineer. */
-"Clear" = "Limpar Pesquisas Recentes";
+"Clear Recent Searches" = "Limpar Pesquisas Recentes";
 
 /* No comment provided by engineer. */
 "Click the Open button to open this file." = "Clique no botão Abrir para abrir este ficheiro.";
@@ -111,9 +120,6 @@
 "Copy Page Link to Clipboard" = "Copiar Link da Página para a Área de Transferência";
 
 /* No comment provided by engineer. */
-"Credentials Prompt" = "A subscrição de \"%@\" de nome de utilizador e palavra-passe para acesso.";
-
-/* No comment provided by engineer. */
 "Database Upgrade" = "Base de Dados Actualizada";
 
 /* Data field name visible in menu/article list/smart folder definition */
@@ -127,40 +133,22 @@
 "Delete Article" = "Apagar Artigo";
 
 /* No comment provided by engineer. */
-"Delete folder status" = "A apagar pasta \"%@\"…";
-
-/* No comment provided by engineer. */
 "Delete group folder" = "Apagar pasta de grupo";
-
-/* No comment provided by engineer. */
-"Delete group folder text" = "Tem a certeza que deseja apagar a pasta de grupo \"%@\" e todas as sub-pastas? Esta operação não pode ser anulada.";
 
 /* No comment provided by engineer. */
 "Delete multiple folders" = "Apagar múltiplas pastas";
 
 /* No comment provided by engineer. */
-"Delete multiple folders text" = "Tem a certeza que deseja apagar todas as %d pastas seleccionadas? Esta operação não pode ser anulada.";
-
-/* No comment provided by engineer. */
-"Delete RSS feed" = "Apagar subscrição";
-
-/* No comment provided by engineer. */
-"Delete RSS feed text" = "Tem a certeza que deseja anular a subcrição de \"%@\"? Esta operação vai apagar todos os artigos em cache.";
-
-/* No comment provided by engineer. */
-"Delete selected message" = "Tem a certeza que deseja apagar permanentemente os estilos seleccionados?";
-
-/* No comment provided by engineer. */
-"Delete selected message text" = "Esta operação não pode ser anulada.";
-
-/* No comment provided by engineer. */
 "Delete smart folder" = "Apagar pasta inteligente";
 
 /* No comment provided by engineer. */
-"Delete smart folder text" = "tem a certeza que deseja apagar a pasta inteligente \"%@\"? Isto não vai apagar os artigos actualmente associados à procura.";
+"Delete subscription" = "Apagar subscrição";
 
 /* Data field name visible in smart folder definition */
 "Deleted" = "Apagado";
+
+/* No comment provided by engineer. */
+"Deleting folder \"%@\"…" = "A apagar pasta \"%@\"…";
 
 /* No comment provided by engineer. */
 "Do you really want to import the subscriptions from the specified OPML file?" = "Deseja realmente importar as subscrições do ficheiro OPML especificado?";
@@ -180,41 +168,29 @@
 /* Notification title */
 "Download failed" = "Download falhou";
 
-/* No comment provided by engineer. */
-"Downloads Running" = "Um ou mais downloads estão em progresso";
-
-/* No comment provided by engineer. */
-"Downloads Running text" = "Se encerrar o Vienna agora, todos os downloads serão parados.";
-
 /* Title of a menu item */
 "Edit…" = "Editar…";
 
 /* Title of a button on an alert */
 "Empty" = "Vazio";
 
-/* No comment provided by engineer. */
-"Empty Trash message" = "Tem a certeza que deseja apagar as pastas que estão no lixo permanentemente?";
-
-/* No comment provided by engineer. */
-"Empty Trash message text" = "Não pode anular esta acção";
+/* Data field name (Y/N) visible in menu/smart folder definition */
+"Enclosure" = "Anexo";
 
 /* Data field name (URL) visible in menu/article list */
-"Enclosure" = "URL do Anexo";
+"Enclosure URL" = "URL do Anexo";
 
 /* No comment provided by engineer. */
 "Enter the URL here" = "Introduza o URL aqui";
 
-/* No comment provided by engineer. */
+/* Already subscribed title */
 "Error" = "Erro";
 
 /* No comment provided by engineer. */
-"Error importing subscriptions body" = "Não é possível importar o ficheiro especificado. O conteúdo do ficheiro não é um formato OPML XML válido.";
-
-/* No comment provided by engineer. */
-"Error importing subscriptions title" = "Erro ao Importar";
-
-/* No comment provided by engineer. */
 "Error parsing XML data in feed" = "Error no parsing de dados XML da fonte";
+
+/* No comment provided by engineer. */
+"Export Completed" = "Exportação Completada";
 
 /* No comment provided by engineer. */
 "External Browser" = "Browser Externo";
@@ -227,6 +203,9 @@
 
 /* Notification body */
 "File %@ failed to download" = "Download do ficheiro %@ falhou";
+
+/* No comment provided by engineer. */
+"Filter in %@" = "Pesquisar em %@";
 
 /* No comment provided by engineer. */
 "Flag" = "Marcar";
@@ -252,9 +231,6 @@
 /* No comment provided by engineer. */
 "Go forward to the next page" = "Ir para a página seguinte";
 
-/* Data field name (Y/N) visible in menu/smart folder definition */
-"HasEnclosure" = "Anexo";
-
 /* No comment provided by engineer. */
 "Hide Filter Bar" = "Ocultar Barra de Filtragem";
 
@@ -264,17 +240,20 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "Código HTTP %d devolvido pelo servidor";
 
+/* No comment provided by engineer. */
+"If you quit Vienna now, all downloads will stop." = "Se encerrar o Vienna agora, todos os downloads serão parados.";
+
 /* Title of a button on an alert */
 "Import" = "Importar";
 
 /* No comment provided by engineer. */
+"Import Completed" = "Importação Completada";
+
+/* No comment provided by engineer. */
+"Import error" = "Erro ao Importar";
+
+/* No comment provided by engineer. */
 "Import subscriptions from OPML file?" = "Importar subscrições de um ficheiro OPML?";
-
-/* No comment provided by engineer. */
-"Invalid style body" = "Será usado o estilo Padrão em alternativa.";
-
-/* No comment provided by engineer. */
-"Invalid style title" = "O estilo %@ parece estar em falta ou corrompido";
 
 /* test for a value */
 "is" = "é";
@@ -308,12 +287,6 @@
 
 /* No comment provided by engineer. */
 "Last Week" = "Última Semana";
-
-/* No comment provided by engineer. */
-"Locate Text" = "Uma nova base de dados do Vienna não pode ser criada em \"%@\" porque provavelmente a pasta está localizada num disco de rede e esta versão do Vienna não consegue manipular bases de dados remotas. Por favor escolha uma máquina que esteja localizada no seu computador.";
-
-/* No comment provided by engineer. */
-"Locate Title" = "Não é possível criar a base de dados do Vienna";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "Marcar Todos os Artigos como Lidos";
@@ -352,22 +325,16 @@
 "New articles retrieved" = "Novos artigos recebidos";
 
 /* No comment provided by engineer. */
-"New style body" = "O estilo \"%@\" foi instalado na sua pasta de estilos e adicionado ao menu de estilos.";
-
-/* No comment provided by engineer. */
-"New style title" = "O Vienna instalou um novo estilo";
-
-/* No comment provided by engineer. */
 "New Tab" = "Novo Separador";
-
-/* Notification body */
-"New unread articles retrieved" = "%d novos artigos recebidos";
 
 /* No comment provided by engineer. */
 "No" = "Não";
 
 /* No comment provided by engineer. */
 "No new articles available" = "Nenhum artigo novo disponível";
+
+/* No comment provided by engineer. */
+"One or more downloads are in progress" = "Um ou mais downloads estão em progresso";
 
 /* Title of a popup menu item */
 "Open" = "Abrir";
@@ -464,7 +431,7 @@
 "Restore Article" = "Restaurar Artigo";
 
 /* No comment provided by engineer. */
-"Resubscribe" = "Resubscrever";
+"Resubscribe to Feed" = "Resubscrever";
 
 /* No comment provided by engineer. */
 "Retrieving articles" = "A Receber Artigos";
@@ -475,17 +442,8 @@
 /* No comment provided by engineer. */
 "Return to the previous page" = "Voltar para a página anterior";
 
-/* No comment provided by engineer. */
-"RSS Subscription Export Title" = "Exportação Completada";
-
-/* No comment provided by engineer. */
-"RSS Subscription Import Title" = "Importação Completada";
-
 /* Placeholder title of a search field */
 "Search all articles" = "Procurar todos os artigos";
-
-/* No comment provided by engineer. */
-"Search in %@" = "Pesquisar em %@";
 
 /* No comment provided by engineer. */
 "Search Results" = "Procurar resultados";
@@ -511,6 +469,12 @@
 /* Title of a menu item */
 "Show Toolbar" = "Mostrar barra de ferramentas";
 
+/* No comment provided by engineer. */
+"Sorry but Vienna was unable to open the database" = "Desculpe mas o Vienna não consegue abrir a base de dados";
+
+/* No comment provided by engineer. */
+"Sorry, but Vienna was unable to create the database folder" = "Desculpe, mas o Vienna não conseguiu criar a pasta da base de dados";
+
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "Assunto";
 
@@ -524,7 +488,34 @@
 "Text" = "Texto";
 
 /* No comment provided by engineer. */
+"The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "O formato de ficheiro da base de dados (%@) não é suportado por esta versão do Vienna. Apague ou altere o nome do ficheiro e reinicie o Vienna.";
+
+/* No comment provided by engineer. */
+"The database file (%@) could not be opened for some reason. It may be corrupted or inaccessible. Please delete or rename the database file and restart Vienna." = "O ficheiro da base de dados (%@) não pode ser aberto por alguma razão. Pode estar corrompido ou inacessível. Por favor apague ou mude o nome do ficheiro da base de dados e reinicie o Vienna.";
+
+/* No comment provided by engineer. */
+"The database file format has changed" = "O formato de ficheiro da base de dados foi alterado";
+
+/* No comment provided by engineer. */
+"The Default style will be used instead." = "Será usado o estilo Padrão em alternativa.";
+
+/* No comment provided by engineer. */
+"The specified export output file could not be created. Check that it is not locked and no other application is using it." = "O ficheiro de exprtação não pode ser criado. Verifique se não está bloqueado e não está outra aplicação a usá-lo.";
+
+/* No comment provided by engineer. */
+"The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "O estilo \"%@\" foi instalado na sua pasta de estilos e adicionado ao menu de estilos.";
+
+/* No comment provided by engineer. */
+"The style %@ appears to be missing or corrupted" = "O estilo %@ parece estar em falta ou corrompido";
+
+/* No comment provided by engineer. */
+"The subscription for \"%@\" requires a user name and password for access." = "A subscrição de \"%@\" de nome de utilizador e palavra-passe para acesso.";
+
+/* No comment provided by engineer. */
 "This article contains an enclosed file." = "Este artigo contém um ficheiro anexo.";
+
+/* No comment provided by engineer. */
+"This operation cannot be undone." = "Esta operação não pode ser anulada.";
 
 /* No comment provided by engineer. */
 "Today" = "Hoje";
@@ -542,29 +533,35 @@
 "Unread Articles" = "Artigos Não Lidos";
 
 /* No comment provided by engineer. */
-"Unrecognised database format text" = "O formato de ficheiro da base de dados (%@) não é suportado por esta versão do Vienna. Apague ou altere o nome do ficheiro e reinicie o Vienna.";
+"Unsubscribe from Feed" = "Cancelar Subscrição";
 
 /* No comment provided by engineer. */
-"Unrecognised database format title" = "O formato de ficheiro da base de dados foi alterado";
+"Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "O Vienna não consegue abrir o ficheiro \"%@\" porque ele foi movido depois de descarregado.";
 
 /* No comment provided by engineer. */
-"Unsubscribe" = "Cancelar Subscrição";
+"Vienna cannot open the file." = "O Vienna não consegue abrir o ficheiro.";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file body" = "O Vienna não consegue abrir o ficheiro \"%@\" porque ele foi movido depois de descarregado.";
+"Vienna cannot show the file \"%@\" because it moved since you downloaded it." = "O Vienna não consegue mostrar o ficheiro \"%@\" porque ele foi movido depois de descarregado.";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file title" = "O Vienna não consegue abrir o ficheiro.";
+"Vienna cannot show the file." = "O Vienna não consegue mostrar o ficheiro.";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file body" = "O Vienna não consegue mostrar o ficheiro \"%@\" porque ele foi movido depois de descarregado.";
+"Vienna has installed a new style" = "O Vienna instalou um novo estilo";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file title" = "O Vienna não consegue mostrar o ficheiro.";
+"Vienna was trying to create the folder \"%@\" but an error occurred. Check the permissions on the folders on the path specified." = "o Vienna estava a tentar criar a pasta \"%@\" mas ocurreu um erro. Verifique as permissões das pastas na localização especificada.";
 
 /* No comment provided by engineer. */
 "Yes" = "Sim";
 
 /* No comment provided by engineer. */
 "Yesterday" = "Ontem";
+
+/* You are already subscribed to that feed */
+"You are already subscribed to that feed" = "Fonte já subscrita";
+
+/* No comment provided by engineer. */
+"You cannot undo this action" = "Não pode anular esta acção";
 
