--- a/Vienna/Resources/tr.lproj/Localizable.strings
+++ b/Vienna/Resources/tr.lproj/Localizable.strings
@@ -10,6 +10,9 @@
 /* No comment provided by engineer. */
 "%d new articles retrieved" = "%d yeni makale alındı";
 
+/* Notification body */
+"%d new unread articles retrieved" = "%d yeni okunmayan makale alındı";
+
 /* No comment provided by engineer. */
 "%d subscriptions successfully exported" = "%d abonelikleri başarılı bir şekilde çıkarıldı";
 
@@ -27,6 +30,9 @@
 
 /* No comment provided by engineer. */
 "A folder with that name already exists" = "Bu isimde başka bir klasör var";
+
+/* No comment provided by engineer. */
+"A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "Yeni bir Vienna veritabanı \"%@\" konumunda oluşturulamıyor çünkü muhtemelen o klasör ya uzaktaki bir ağa dahil, zira Vienna'nın bu versiyonu ağ üzerindeki klasörler ile çalışacak şekilde tasarlanmamıştır. Bilgisayarınız üzerinde bulunan bir klasörü seçmeyi deneyin.";
 
 /* Toolbar item name for the Advanced preference pane */
 "Advanced" = "Gelişmiş";
@@ -46,17 +52,29 @@
 /* No comment provided by engineer. */
 "After a Week" = "Bir Hafta Sonra";
 
-/* Already subscribed body */
-"Already subscribed body" = "Bu beslemeye zaten abonesiniz";
-
-/* Already subscribed title */
-"Already subscribed title" = "Hata";
-
 /* No comment provided by engineer. */
 "An error occurred when this feed was last refreshed" = "Bu besleme en son yenilendiğinde bir hata oluştu";
 
 /* Toolbar item name for the Appearance preference pane */
 "Appearance" = "Görünüm";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete all %d selected folders? This operation cannot be undone." = "%d seçili klasörlerini silmek istediğinize emin misiniz? Bu işlem geri alınamaz.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete group folder \"%@\" and all sub folders? This operation cannot be undone." = "\"%@\" grup klasörünü ve tüm alt klasörlerini silmek istediğinize emin misiniz? Bu işlem geri alınamaz.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete smart folder \"%@\"? This will not delete the actual articles matched by the search." = "\"%@\" akıllı klasörünü ve tüm alt klasörlerini silmek istediğinize emin misiniz? Bu işlem arama ile ulaşılan asıl makaleleri silmeyecektir.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete the messages in the Trash folder permanently?" = "Çöp kutusundaki bu mesajları kalıcı olarak silmek istediğinizden emin misiniz?";
+
+/* No comment provided by engineer. */
+"Are you sure you want to permanently delete the selected articles?" = "Seçili makaleleri kalıcı olarak silmek istediğinizden emin misiniz?";
+
+/* No comment provided by engineer. */
+"Are you sure you want to unsubscribe from \"%@\"? This operation will delete all cached articles." = "\"%@\" üzerindeki aboneliğinizi iptal etmek istediğinize emin misiniz? Bu işlem abonelik dahilindeki tüm makaleleri silecektir.";
 
 /* No comment provided by engineer. */
 "Articles" = "Makaleler";
@@ -69,28 +87,19 @@
 "Cancel" = "İptal";
 
 /* No comment provided by engineer. */
-"Cannot create database folder text" = "Vienna \"%@\" klasörünü oluşturmaya çalışırken bir hata oluştu. Klasör izinlerinizi kontrol edin.";
+"Cannot create export output file" = "Harici dosya oluşturulamıyor";
 
 /* No comment provided by engineer. */
-"Cannot create database folder title" = "Üzgünüm, ama Vienna veritabanı klasörünü oluşturamadı";
+"Cannot create the Vienna database" = "Vienna veritabanı oluşturulamıyor";
 
 /* No comment provided by engineer. */
-"Cannot open database text" = "(%@) veritabanı bir sebepten ötürü açılamadı. Dosya zarar görmüş ya da ulaşılamıyor olabilir. Lütfen veritabanı dosyasını silin ya da yeniden adlandırın ve ardından Vienna'yı yeniden başlatın.";
-
-/* No comment provided by engineer. */
-"Cannot open database title" = "Üzgünüm ama Vienna veritabanını açamadı";
-
-/* No comment provided by engineer. */
-"Cannot open export file message" = "Harici dosya oluşturulamıyor";
-
-/* No comment provided by engineer. */
-"Cannot open export file message text" = "İstenen harici dosya oluşturulamadı. Kilitli olmadığından ve başka bir yazılım tarafından kullanılmadığından emin olun.";
+"Cannot import the specified file. The file contents are not valid OPML XML format." = "Seçili dosya dahil edilemiyor. Dosya içeriği OPML XML biçimine uygun değil.";
 
 /* No comment provided by engineer. */
 "Cannot rename folder" = "Dosya yeniden adlandırılamıyor";
 
 /* No comment provided by engineer. */
-"Clear" = "Son aramaları temizle";
+"Clear Recent Searches" = "Son aramaları temizle";
 
 /* No comment provided by engineer. */
 "Click the Open button to open this file." = "Bu dosyayı açmak için Aç düğmesine basın.";
@@ -111,9 +120,6 @@
 "Copy Page Link to Clipboard" = "Sayfa Adresini Panoya Kopyala";
 
 /* No comment provided by engineer. */
-"Credentials Prompt" = "\"%@\" için abonelik kullanıcı adı ve şifre gerektiriyor.";
-
-/* No comment provided by engineer. */
 "Database Upgrade" = "Veritabanı Güncellemesi";
 
 /* Data field name visible in menu/article list/smart folder definition */
@@ -127,40 +133,22 @@
 "Delete Article" = "Makaleyi Sil";
 
 /* No comment provided by engineer. */
-"Delete folder status" = "\"%@\" klasörü siliniyor…";
-
-/* No comment provided by engineer. */
 "Delete group folder" = "Grup klasörünü sil";
-
-/* No comment provided by engineer. */
-"Delete group folder text" = "\"%@\" grup klasörünü ve tüm alt klasörlerini silmek istediğinize emin misiniz? Bu işlem geri alınamaz.";
 
 /* No comment provided by engineer. */
 "Delete multiple folders" = "Çok sayıda klasörü sil";
 
 /* No comment provided by engineer. */
-"Delete multiple folders text" = "%d seçili klasörlerini silmek istediğinize emin misiniz? Bu işlem geri alınamaz.";
-
-/* No comment provided by engineer. */
-"Delete RSS feed" = "Aboneliği sil";
-
-/* No comment provided by engineer. */
-"Delete RSS feed text" = "\"%@\" üzerindeki aboneliğinizi iptal etmek istediğinize emin misiniz? Bu işlem abonelik dahilindeki tüm makaleleri silecektir.";
-
-/* No comment provided by engineer. */
-"Delete selected message" = "Seçili makaleleri kalıcı olarak silmek istediğinizden emin misiniz?";
-
-/* No comment provided by engineer. */
-"Delete selected message text" = "Bu özellik geri alınamaz.";
-
-/* No comment provided by engineer. */
 "Delete smart folder" = "Akıllı klasörü sil";
 
 /* No comment provided by engineer. */
-"Delete smart folder text" = "\"%@\" akıllı klasörünü ve tüm alt klasörlerini silmek istediğinize emin misiniz? Bu işlem arama ile ulaşılan asıl makaleleri silmeyecektir.";
+"Delete subscription" = "Aboneliği sil";
 
 /* Data field name visible in smart folder definition */
 "Deleted" = "Silindi";
+
+/* No comment provided by engineer. */
+"Deleting folder \"%@\"…" = "\"%@\" klasörü siliniyor…";
 
 /* No comment provided by engineer. */
 "Do you really want to import the subscriptions from the specified OPML file?" = "Abonelikleri seçili OPML dosyasından yüklemek istediğinize emin misiniz?";
@@ -183,41 +171,29 @@
 /* Notification title */
 "Download failed" = "İndirme başarısız";
 
-/* No comment provided by engineer. */
-"Downloads Running" = "Bir ya da daha fazla dosya indiriliyor";
-
-/* No comment provided by engineer. */
-"Downloads Running text" = "Eğer şimdi Vienna'dan çıkarsanız, tüm indirmeler durdurulacak.";
-
 /* Title of a menu item */
 "Edit…" = "Düzenle…";
 
 /* Title of a button on an alert */
 "Empty" = "Boş";
 
-/* No comment provided by engineer. */
-"Empty Trash message" = "Çöp kutusundaki bu mesajları kalıcı olarak silmek istediğinizden emin misiniz?";
-
-/* No comment provided by engineer. */
-"Empty Trash message text" = "Bu işlemi geri alamazsınız";
+/* Data field name (Y/N) visible in menu/smart folder definition */
+"Enclosure" = "Ek";
 
 /* Data field name (URL) visible in menu/article list */
-"Enclosure" = "Ek URL";
+"Enclosure URL" = "Ek URL";
 
 /* No comment provided by engineer. */
 "Enter the URL here" = "URL'yi buraya giriniz";
 
-/* No comment provided by engineer. */
+/* Already subscribed title */
 "Error" = "Hata";
 
 /* No comment provided by engineer. */
-"Error importing subscriptions body" = "Seçili dosya dahil edilemiyor. Dosya içeriği OPML XML biçimine uygun değil.";
-
-/* No comment provided by engineer. */
-"Error importing subscriptions title" = "Dahil etme hatası";
-
-/* No comment provided by engineer. */
 "Error parsing XML data in feed" = "Beslemedeki XML verisi aktarımında hata";
+
+/* No comment provided by engineer. */
+"Export Completed" = "Dışa çıkarma tamamlandı";
 
 /* No comment provided by engineer. */
 "External Browser" = "Harici Tarayıcı";
@@ -230,6 +206,9 @@
 
 /* Notification body */
 "File %@ failed to download" = "%@ dosyası indirilemedi";
+
+/* No comment provided by engineer. */
+"Filter in %@" = "%@ içerisinde filtrele";
 
 /* No comment provided by engineer. */
 "Flag" = "Bayrak";
@@ -255,9 +234,6 @@
 /* No comment provided by engineer. */
 "Go forward to the next page" = "Sonraki sayfaya geç";
 
-/* Data field name (Y/N) visible in menu/smart folder definition */
-"HasEnclosure" = "Ek";
-
 /* Pseudo field name visible in article list */
 "Headlines" = "Başlıklar";
 
@@ -270,17 +246,20 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "%d HTTP kodu sunucudan alındı";
 
+/* No comment provided by engineer. */
+"If you quit Vienna now, all downloads will stop." = "Eğer şimdi Vienna'dan çıkarsanız, tüm indirmeler durdurulacak.";
+
 /* Title of a button on an alert */
 "Import" = "İçeri al";
 
 /* No comment provided by engineer. */
+"Import Completed" = "İçeri alma tamamlandı";
+
+/* No comment provided by engineer. */
+"Import error" = "Dahil etme hatası";
+
+/* No comment provided by engineer. */
 "Import subscriptions from OPML file?" = "Abonelikleri OPML dosyasından yükle?";
-
-/* No comment provided by engineer. */
-"Invalid style body" = "Geçerli stil onun yerine kullanılacak.";
-
-/* No comment provided by engineer. */
-"Invalid style title" = "%@ stilinde ya bir sorun var ya da stil bulunamadı";
 
 /* test for a value */
 "is" = "dir";
@@ -317,12 +296,6 @@
 
 /* Data field name visible in menu/article list */
 "Link" = "Bağlantı";
-
-/* No comment provided by engineer. */
-"Locate Text" = "Yeni bir Vienna veritabanı \"%@\" konumunda oluşturulamıyor çünkü muhtemelen o klasör ya uzaktaki bir ağa dahil, zira Vienna'nın bu versiyonu ağ üzerindeki klasörler ile çalışacak şekilde tasarlanmamıştır. Bilgisayarınız üzerinde bulunan bir klasörü seçmeyi deneyin.";
-
-/* No comment provided by engineer. */
-"Locate Title" = "Vienna veritabanı oluşturulamıyor";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "Tüm Makaleleri Okundu Olarak İşaretle";
@@ -361,16 +334,7 @@
 "New articles retrieved" = "Yeni makaleler alındı";
 
 /* No comment provided by engineer. */
-"New style body" = "\"%@\" stili Stiller klasörünüze yüklendi ve Stil menüsüne eklendi.";
-
-/* No comment provided by engineer. */
-"New style title" = "Vienna yeni bir stil yükledi";
-
-/* No comment provided by engineer. */
 "New Tab" = "Yeni Sekme";
-
-/* Notification body */
-"New unread articles retrieved" = "%d yeni okunmayan makale alındı";
 
 /* No comment provided by engineer. */
 "No" = "Hayır";
@@ -380,6 +344,9 @@
 
 /* Title of a button on an alert */
 "OK" = "Tamam";
+
+/* No comment provided by engineer. */
+"One or more downloads are in progress" = "Bir ya da daha fazla dosya indiriliyor";
 
 /* Title of a popup menu item */
 "Open" = "Aç";
@@ -476,7 +443,7 @@
 "Restore Article" = "Makaleyi Sıfırla";
 
 /* No comment provided by engineer. */
-"Resubscribe" = "Beslemeye Yeniden Abone Ol";
+"Resubscribe to Feed" = "Beslemeye Yeniden Abone Ol";
 
 /* No comment provided by engineer. */
 "Retrieving articles" = "Makaleler alınıyor";
@@ -487,17 +454,8 @@
 /* No comment provided by engineer. */
 "Return to the previous page" = "Önceki sayfaya geri dön";
 
-/* No comment provided by engineer. */
-"RSS Subscription Export Title" = "Dışa çıkarma tamamlandı";
-
-/* No comment provided by engineer. */
-"RSS Subscription Import Title" = "İçeri alma tamamlandı";
-
 /* Placeholder title of a search field */
 "Search all articles" = "Tüm makalelerde ara";
-
-/* No comment provided by engineer. */
-"Search in %@" = "%@ içerisinde filtrele";
 
 /* No comment provided by engineer. */
 "Search Results" = "Arama Sonuçları";
@@ -520,6 +478,12 @@
 /* Title of a menu item */
 "Show Status Bar" = "Durum Çubuğunu Göster";
 
+/* No comment provided by engineer. */
+"Sorry but Vienna was unable to open the database" = "Üzgünüm ama Vienna veritabanını açamadı";
+
+/* No comment provided by engineer. */
+"Sorry, but Vienna was unable to create the database folder" = "Üzgünüm, ama Vienna veritabanı klasörünü oluşturamadı";
+
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "Konu";
 
@@ -533,7 +497,34 @@
 "Text" = "Metin";
 
 /* No comment provided by engineer. */
+"The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "Veritabanı (%@) dosya biçimi Vienna'nın bu sürümü tarafından desteklenmiyor. Dosyayı silip ya da yeniden adlandırıp Vienna'yı yeniden başlatmak ister misiniz?.";
+
+/* No comment provided by engineer. */
+"The database file (%@) could not be opened for some reason. It may be corrupted or inaccessible. Please delete or rename the database file and restart Vienna." = "(%@) veritabanı bir sebepten ötürü açılamadı. Dosya zarar görmüş ya da ulaşılamıyor olabilir. Lütfen veritabanı dosyasını silin ya da yeniden adlandırın ve ardından Vienna'yı yeniden başlatın.";
+
+/* No comment provided by engineer. */
+"The database file format has changed" = "Veritabanı dosya biçimi değişmiş";
+
+/* No comment provided by engineer. */
+"The Default style will be used instead." = "Geçerli stil onun yerine kullanılacak.";
+
+/* No comment provided by engineer. */
+"The specified export output file could not be created. Check that it is not locked and no other application is using it." = "İstenen harici dosya oluşturulamadı. Kilitli olmadığından ve başka bir yazılım tarafından kullanılmadığından emin olun.";
+
+/* No comment provided by engineer. */
+"The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "\"%@\" stili Stiller klasörünüze yüklendi ve Stil menüsüne eklendi.";
+
+/* No comment provided by engineer. */
+"The style %@ appears to be missing or corrupted" = "%@ stilinde ya bir sorun var ya da stil bulunamadı";
+
+/* No comment provided by engineer. */
+"The subscription for \"%@\" requires a user name and password for access." = "\"%@\" için abonelik kullanıcı adı ve şifre gerektiriyor.";
+
+/* No comment provided by engineer. */
 "This article contains an enclosed file." = "Bu makale bir ek dosya içeriyor.";
+
+/* No comment provided by engineer. */
+"This operation cannot be undone." = "Bu özellik geri alınamaz.";
 
 /* No comment provided by engineer. */
 "Today" = "Bugün";
@@ -551,29 +542,35 @@
 "Unread Articles" = "Okunmamış Makaleler";
 
 /* No comment provided by engineer. */
-"Unrecognised database format text" = "Veritabanı (%@) dosya biçimi Vienna'nın bu sürümü tarafından desteklenmiyor. Dosyayı silip ya da yeniden adlandırıp Vienna'yı yeniden başlatmak ister misiniz?.";
+"Unsubscribe from Feed" = "Besleme Aboneliğini İptal Et";
 
 /* No comment provided by engineer. */
-"Unrecognised database format title" = "Veritabanı dosya biçimi değişmiş";
+"Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "Vienna \"%@\" dosyasını açamıyor çünkü siz onu indirdikten sonra dosyanın yeri değişmiş.";
 
 /* No comment provided by engineer. */
-"Unsubscribe" = "Besleme Aboneliğini İptal Et";
+"Vienna cannot open the file." = "Vienna dosyayı açamıyor.";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file body" = "Vienna \"%@\" dosyasını açamıyor çünkü siz onu indirdikten sonra dosyanın yeri değişmiş.";
+"Vienna cannot show the file \"%@\" because it moved since you downloaded it." = "Vienna \"%@\" dosyasını gösteremiyor çünkü siz onu indirdikten sonra dosyanın yeri değişmiş.";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file title" = "Vienna dosyayı açamıyor.";
+"Vienna cannot show the file." = "Vienna dosyayı gösteremiyor.";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file body" = "Vienna \"%@\" dosyasını gösteremiyor çünkü siz onu indirdikten sonra dosyanın yeri değişmiş.";
+"Vienna has installed a new style" = "Vienna yeni bir stil yükledi";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file title" = "Vienna dosyayı gösteremiyor.";
+"Vienna was trying to create the folder \"%@\" but an error occurred. Check the permissions on the folders on the path specified." = "Vienna \"%@\" klasörünü oluşturmaya çalışırken bir hata oluştu. Klasör izinlerinizi kontrol edin.";
 
 /* No comment provided by engineer. */
 "Yes" = "Evet";
 
 /* No comment provided by engineer. */
 "Yesterday" = "Dün";
+
+/* You are already subscribed to that feed */
+"You are already subscribed to that feed" = "Bu beslemeye zaten abonesiniz";
+
+/* No comment provided by engineer. */
+"You cannot undo this action" = "Bu işlemi geri alamazsınız";
 
