--- a/Vienna/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Vienna/Resources/zh-Hans.lproj/Localizable.strings
@@ -13,6 +13,9 @@
 /* No comment provided by engineer. */
 "%d new articles retrieved" = "有 %d 篇新文章";
 
+/* Notification body */
+"%d new unread articles retrieved" = "收到了 %d 篇新文章";
+
 /* No comment provided by engineer. */
 "%d subscriptions successfully exported" = "已经成功输出了 %d 个频道";
 
@@ -34,6 +37,9 @@
 /* No comment provided by engineer. */
 "A new plugin has been installed. It is now available from the menu and you can add it to the toolbar." = "一个新的插件已经被安装. 现在您可以在功能列表中启用以及添加到工具栏中.";
 
+/* No comment provided by engineer. */
+"A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "无法在 \"%@\" 创建新的 Vienna 数据库。可能是因为此文件夹处于远端共享网络上，当前版本的 Vienna 不支持远端共享网络上的数据库。请选择一个在您本地机器上的文件夹。";
+
 /* Toolbar item name for the Advanced preference pane */
 "Advanced" = "高级";
 
@@ -52,12 +58,6 @@
 /* No comment provided by engineer. */
 "After a Week" = "一周后";
 
-/* Already subscribed body */
-"Already subscribed body" = "您已经订阅了这个频道";
-
-/* Already subscribed title */
-"Already subscribed title" = "错误";
-
 /* No comment provided by engineer. */
 "An error occurred when this feed was last refreshed" = "上次更新这个频道时发生了一个错误";
 
@@ -66,6 +66,24 @@
 
 /* No comment provided by engineer. */
 "AppleScript Error in '%@' script" = "苹果脚本在 '%@' 发生错误";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete all %d selected folders? This operation cannot be undone." = "您确定要删除所有%d个被选中的文件夹么？这个操作不可还原";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete group folder \"%@\" and all sub folders? This operation cannot be undone." = "您确定要删除群组文件夹 \"%@\" 以及它的子目录么？这个操作不可还原";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete smart folder \"%@\"? This will not delete the actual articles matched by the search." = "您确定要删除智能文件夹 \"%@\" 么？这将不会影响符合搜索条件的条目";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete the messages in the Trash folder permanently?" = "您确定要永久删除废纸篓中的文章么？";
+
+/* No comment provided by engineer. */
+"Are you sure you want to permanently delete the selected articles?" = "您确定要永久删除所选的文章么？";
+
+/* No comment provided by engineer. */
+"Are you sure you want to unsubscribe from \"%@\"? This operation will delete all cached articles." = "您确定要取消 \"%@\" 的订阅么？这个操作将会删除这个频道下的全部条目";
 
 /* No comment provided by engineer. */
 "Articles" = "文章";
@@ -84,28 +102,19 @@
 "Cancel" = "取消";
 
 /* No comment provided by engineer. */
-"Cannot create database folder text" = "Vienna 在创建文件夹 \"%@\" 时发生错误。请检查指定路径上文件夹的权限";
+"Cannot create export output file" = "无法创建输出文件";
 
 /* No comment provided by engineer. */
-"Cannot create database folder title" = "抱歉，Vianna 无法创建数据库文件夹";
+"Cannot create the Vienna database" = "无法创建 Vienna 数据库";
 
 /* No comment provided by engineer. */
-"Cannot open database text" = "由于一些原因，数据库文件 (%@) 无法被读取。它可能已损坏或者权限不足。请尝试删除或者重命名数据库文件然后重新启动 Vienna";
-
-/* No comment provided by engineer. */
-"Cannot open database title" = "抱歉，Vienna 无法开启这个数据库";
-
-/* No comment provided by engineer. */
-"Cannot open export file message" = "无法创建输出文件";
-
-/* No comment provided by engineer. */
-"Cannot open export file message text" = "无法创建指定的输出文件。请检查这个文件是否被锁定，以及是否有其他程序正在使用";
+"Cannot import the specified file. The file contents are not valid OPML XML format." = "无法导入指定文件。文件内容不是有效的 OPML XML 格式";
 
 /* No comment provided by engineer. */
 "Cannot rename folder" = "无法重命名文件夹";
 
 /* No comment provided by engineer. */
-"Clear" = "清楚最近的搜索";
+"Clear Recent Searches" = "清楚最近的搜索";
 
 /* No comment provided by engineer. */
 "Click the Open button to open this file." = "点击开启按钮来开启文件";
@@ -126,9 +135,6 @@
 "Copy Page Link to Clipboard" = "复制页面连接到粘贴板";
 
 /* No comment provided by engineer. */
-"Credentials Prompt" = "\"%@\" 这个订阅需要提供账号和密码";
-
-/* No comment provided by engineer. */
 "Database Upgrade" = "数据库升级";
 
 /* Data field name visible in menu/article list/smart folder definition */
@@ -142,43 +148,25 @@
 "Delete Article" = "删除文章";
 
 /* No comment provided by engineer. */
-"Delete folder status" = "正在删除文件夹 \"%@\"…";
-
-/* No comment provided by engineer. */
 "Delete group folder" = "删除群组文件夹";
-
-/* No comment provided by engineer. */
-"Delete group folder text" = "您确定要删除群组文件夹 \"%@\" 以及它的子目录么？这个操作不可还原";
 
 /* No comment provided by engineer. */
 "Delete multiple folders" = "删除多个文件夹";
 
 /* No comment provided by engineer. */
-"Delete multiple folders text" = "您确定要删除所有%d个被选中的文件夹么？这个操作不可还原";
-
-/* No comment provided by engineer. */
-"Delete RSS feed" = "删除频道";
-
-/* No comment provided by engineer. */
-"Delete RSS feed text" = "您确定要取消 \"%@\" 的订阅么？这个操作将会删除这个频道下的全部条目";
-
-/* No comment provided by engineer. */
-"Delete selected message" = "您确定要永久删除所选的文章么？";
-
-/* No comment provided by engineer. */
-"Delete selected message text" = "这个操作无法还原";
-
-/* No comment provided by engineer. */
 "Delete smart folder" = "删除智能文件夹";
 
 /* No comment provided by engineer. */
-"Delete smart folder text" = "您确定要删除智能文件夹 \"%@\" 么？这将不会影响符合搜索条件的条目";
+"Delete subscription" = "删除频道";
 
 /* Title of a menu item */
 "Delete…" = "删除…";
 
 /* Data field name visible in smart folder definition */
 "Deleted" = "已删除";
+
+/* No comment provided by engineer. */
+"Deleting folder \"%@\"…" = "正在删除文件夹 \"%@\"…";
 
 /* No comment provided by engineer. */
 "Descending" = "降序";
@@ -204,44 +192,32 @@
 /* Notification title */
 "Download failed" = "下载失败";
 
-/* No comment provided by engineer. */
-"Downloads Running" = "下载进行中";
-
-/* No comment provided by engineer. */
-"Downloads Running text" = "您确定要取消所有下载并且退出 Vienna 么？";
-
 /* Title of a menu item */
 "Edit…" = "编辑…";
 
 /* Title of a button on an alert */
 "Empty" = "清空";
 
-/* No comment provided by engineer. */
-"Empty Trash message" = "您确定要永久删除废纸篓中的文章么？";
-
-/* No comment provided by engineer. */
-"Empty Trash message text" = "这个操作无法还原";
+/* Data field name (Y/N) visible in menu/smart folder definition */
+"Enclosure" = "附带文件";
 
 /* Data field name (URL) visible in menu/article list */
-"Enclosure" = "附带文件的 URL";
+"Enclosure URL" = "附带文件的 URL";
 
 /* No comment provided by engineer. */
 "Enter the URL here" = "请在这里输入 URL 地址";
 
-/* No comment provided by engineer. */
+/* Already subscribed title */
 "Error" = "错误";
-
-/* No comment provided by engineer. */
-"Error importing subscriptions body" = "无法导入指定文件。文件内容不是有效的 OPML XML 格式";
-
-/* No comment provided by engineer. */
-"Error importing subscriptions title" = "导入错误";
 
 /* No comment provided by engineer. */
 "Error loading script '%@'" = "装入脚本 %@ 时出错";
 
 /* No comment provided by engineer. */
 "Error parsing XML data in feed" = "解析条目中 XML 数据时出现错误";
+
+/* No comment provided by engineer. */
+"Export Completed" = "输出完成";
 
 /* No comment provided by engineer. */
 "External Browser" = "外部浏览器";
@@ -254,6 +230,9 @@
 
 /* Notification body */
 "File %@ failed to download" = "文件 %@ 下载失败";
+
+/* No comment provided by engineer. */
+"Filter in %@" = "在 %@ 中搜索";
 
 /* No comment provided by engineer. */
 "Flag" = "精华";
@@ -279,9 +258,6 @@
 /* No comment provided by engineer. */
 "Go forward to the next page" = "去到下一个页面";
 
-/* Data field name (Y/N) visible in menu/smart folder definition */
-"HasEnclosure" = "附带文件";
-
 /* Pseudo field name visible in article list */
 "Headlines" = "标题";
 
@@ -297,17 +273,20 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "服务器回报 HTTP 代码 %d";
 
+/* No comment provided by engineer. */
+"If you quit Vienna now, all downloads will stop." = "您确定要取消所有下载并且退出 Vienna 么？";
+
 /* Title of a button on an alert */
 "Import" = "导入";
 
 /* No comment provided by engineer. */
+"Import Completed" = "导入完成";
+
+/* No comment provided by engineer. */
+"Import error" = "导入错误";
+
+/* No comment provided by engineer. */
 "Import subscriptions from OPML file?" = "通过 OPML 文件来导入频道么？";
-
-/* No comment provided by engineer. */
-"Invalid style body" = "将会替换为默认的风格";
-
-/* No comment provided by engineer. */
-"Invalid style title" = "%@ 这个风格貌似有问题";
 
 /* test for a value */
 "is" = "为";
@@ -344,12 +323,6 @@
 
 /* Data field name visible in menu/article list */
 "Link" = "连接";
-
-/* No comment provided by engineer. */
-"Locate Text" = "无法在 \"%@\" 创建新的 Vienna 数据库。可能是因为此文件夹处于远端共享网络上，当前版本的 Vienna 不支持远端共享网络上的数据库。请选择一个在您本地机器上的文件夹。";
-
-/* No comment provided by engineer. */
-"Locate Title" = "无法创建 Vienna 数据库";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "标记所有文章为已读";
@@ -388,16 +361,7 @@
 "New articles retrieved" = "新文章";
 
 /* No comment provided by engineer. */
-"New style body" = "\"%@\" 这个风格已经成功安装到了风格文件夹中，您现在可以从风格菜单中选择它了。";
-
-/* No comment provided by engineer. */
-"New style title" = "Vienna 安装了一个新的风格";
-
-/* No comment provided by engineer. */
 "New Tab" = "新标签";
-
-/* Notification body */
-"New unread articles retrieved" = "收到了 %d 篇新文章";
 
 /* No comment provided by engineer. */
 "No" = "否";
@@ -407,6 +371,9 @@
 
 /* Title of a button on an alert */
 "OK" = "是的";
+
+/* No comment provided by engineer. */
+"One or more downloads are in progress" = "下载进行中";
 
 /* Title of a popup menu item */
 "Open" = "打开";
@@ -500,7 +467,7 @@
 "Restore Article" = "复原文章";
 
 /* No comment provided by engineer. */
-"Resubscribe" = "重新订阅频道";
+"Resubscribe to Feed" = "重新订阅频道";
 
 /* No comment provided by engineer. */
 "Retrieving articles" = "正在接收文章";
@@ -511,17 +478,8 @@
 /* No comment provided by engineer. */
 "Return to the previous page" = "回到前一个页面";
 
-/* No comment provided by engineer. */
-"RSS Subscription Export Title" = "输出完成";
-
-/* No comment provided by engineer. */
-"RSS Subscription Import Title" = "导入完成";
-
 /* Placeholder title of a search field */
 "Search all articles" = "搜索所有文章";
-
-/* No comment provided by engineer. */
-"Search in %@" = "在 %@ 中搜索";
 
 /* No comment provided by engineer. */
 "Search Results" = "搜索结果";
@@ -547,6 +505,12 @@
 /* Title of a menu item */
 "Show Toolbar" = "显示工具栏";
 
+/* No comment provided by engineer. */
+"Sorry but Vienna was unable to open the database" = "抱歉，Vienna 无法开启这个数据库";
+
+/* No comment provided by engineer. */
+"Sorry, but Vienna was unable to create the database folder" = "抱歉，Vianna 无法创建数据库文件夹";
+
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "主题";
 
@@ -560,7 +524,34 @@
 "Text" = "内容";
 
 /* No comment provided by engineer. */
+"The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "当前版本的 Vienna 不支持数据库 (%@) 的文件格式。请删除或者重新命名这个文件然后重新 Vianna。";
+
+/* No comment provided by engineer. */
+"The database file (%@) could not be opened for some reason. It may be corrupted or inaccessible. Please delete or rename the database file and restart Vienna." = "由于一些原因，数据库文件 (%@) 无法被读取。它可能已损坏或者权限不足。请尝试删除或者重命名数据库文件然后重新启动 Vienna";
+
+/* No comment provided by engineer. */
+"The database file format has changed" = "数据库文件格式已改变";
+
+/* No comment provided by engineer. */
+"The Default style will be used instead." = "将会替换为默认的风格";
+
+/* No comment provided by engineer. */
+"The specified export output file could not be created. Check that it is not locked and no other application is using it." = "无法创建指定的输出文件。请检查这个文件是否被锁定，以及是否有其他程序正在使用";
+
+/* No comment provided by engineer. */
+"The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "\"%@\" 这个风格已经成功安装到了风格文件夹中，您现在可以从风格菜单中选择它了。";
+
+/* No comment provided by engineer. */
+"The style %@ appears to be missing or corrupted" = "%@ 这个风格貌似有问题";
+
+/* No comment provided by engineer. */
+"The subscription for \"%@\" requires a user name and password for access." = "\"%@\" 这个订阅需要提供账号和密码";
+
+/* No comment provided by engineer. */
 "This article contains an enclosed file." = "这篇文章包含附带文件。";
+
+/* No comment provided by engineer. */
+"This operation cannot be undone." = "这个操作无法还原";
 
 /* No comment provided by engineer. */
 "Today" = "今天";
@@ -578,29 +569,35 @@
 "Unread Articles" = "未读文章";
 
 /* No comment provided by engineer. */
-"Unrecognised database format text" = "当前版本的 Vienna 不支持数据库 (%@) 的文件格式。请删除或者重新命名这个文件然后重新 Vianna。";
+"Unsubscribe from Feed" = "取消频道订阅";
 
 /* No comment provided by engineer. */
-"Unrecognised database format title" = "数据库文件格式已改变";
+"Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "Vienna 无法打开 \"%@\" 这个文件，可能是因为您在下载后移动了这个文件";
 
 /* No comment provided by engineer. */
-"Unsubscribe" = "取消频道订阅";
+"Vienna cannot open the file." = "Vienna 无法打开这个文件";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file body" = "Vienna 无法打开 \"%@\" 这个文件，可能是因为您在下载后移动了这个文件";
+"Vienna cannot show the file \"%@\" because it moved since you downloaded it." = "Vienna 无法显示 \"%@\" 这个文件，可能是因为您在下载后移动了这个文件";
 
 /* No comment provided by engineer. */
-"Vienna cannot open the file title" = "Vienna 无法打开这个文件";
+"Vienna cannot show the file." = "Vienna 无法显示这个文件";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file body" = "Vienna 无法显示 \"%@\" 这个文件，可能是因为您在下载后移动了这个文件";
+"Vienna has installed a new style" = "Vienna 安装了一个新的风格";
 
 /* No comment provided by engineer. */
-"Vienna cannot show the file title" = "Vienna 无法显示这个文件";
+"Vienna was trying to create the folder \"%@\" but an error occurred. Check the permissions on the folders on the path specified." = "Vienna 在创建文件夹 \"%@\" 时发生错误。请检查指定路径上文件夹的权限";
 
 /* No comment provided by engineer. */
 "Yes" = "是";
 
 /* No comment provided by engineer. */
 "Yesterday" = "昨天";
+
+/* You are already subscribed to that feed */
+"You are already subscribed to that feed" = "您已经订阅了这个频道";
+
+/* No comment provided by engineer. */
+"You cannot undo this action" = "这个操作无法还原";
 
